--- a/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
+++ b/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
@@ -34,7 +34,7 @@
 >?
 >+ 以场景一为例，给出操作步骤。
 >+ 场景二中相比场景一为多 VPC 间全互通，请将 VPC 逐一加入云联网，并及时确认云联网及 VPC 中的路由情况，当网段 CIDR 有冲突时，路由状态将显示“失效”，请参考 [路由冲突处理原则](https://cloud.tencent.com/document/product/877/18854#lyct) 处理即可。
->+ 场景三和场景四，请提前根据子网间的通信情况，为子网配置合适的 [ACL 策略](https://cloud.tencent.com/document/product/215/36727)，再逐一迁移至云联网。
+>+ 场景三和场景四，请提前根据子网间的通信情况，为子网配置合适的 [ACL 策略](https://cloud.tencent.com/document/product/215/36727)，再逐一关联 VPC 网络至云联网，并将路由迁移至云联网，期间可通过监控实时查看业务情况。
 >
 1. [创建1个云联网实例](https://cloud.tencent.com/document/product/877/18752)，并关联VPC1。
  ![](https://qcloudimg.tencent-cloud.cn/raw/83b11e969f8309f101499e528ba7ce62.png)
