--- a/product/数据库/云数据库SQL Server/快速入门/管理实例.md
+++ b/product/数据库/云数据库SQL Server/快速入门/管理实例.md
@@ -4,7 +4,7 @@
 
 | 功能      | 介绍                                                         |
 | --------- | ------------------------------------------------------------ |
-| 重启      | 在实例列表，勾选需要重启的实例，单击**重启**对实例进行重启操作，支持批量重启（勾选多个实例）。  · <li>重启期间，实例将无法正常访问，已有的连接会断掉，请您做好准备，以免造成影响。<li>重启期间，如果业务写入量很大，会导致重启失败。重启失败后，实例回到重启之前状态，实例仍可访问。<li>请确保在业务低峰期重启，保证重启成功率，降低对业务的影响。</li> |
+| 重启      | 在实例列表，勾选需要重启的实例，单击**重启**对实例进行重启操作，支持批量重启（勾选多个实例）。  <li>重启期间，实例将无法正常访问，已有的连接会断掉，请您做好准备，以免造成影响。<li>重启期间，如果业务写入量很大，会导致重启失败。重启失败后，实例回到重启之前状态，实例仍可访问。<li>请确保在业务低峰期重启，保证重启成功率，降低对业务的影响。</li> |
 | 续费      | 在实例列表，勾选需要续费的实例，单击**续费**对所选实例进行续费，支持批量续费（勾选多个实例），可选择按年或按月进行续费。 |
 | 设置自动续费      | 在实例列表，勾选需要设置自动续费的实例，单击**更多操作** > **设置自动续费**，支持批量设置自动续费（勾选多个实例），单击确定后可在该实例到期后按月自动续费，需确保设备到期时账号余额充足。 |
 | 取消自动续费      | 在实例列表，勾选需要取消自动续费的实例（实例名称前标记有“续”字样的），选择**更多操作** > **取消自动续费**，支持批量取消自动续费（勾选多个实例），单击确定后即可取消自动续费。 |
@@ -23,7 +23,7 @@
 | ---------- | ------------------------------------------------------------ |
 | 实例详情   | 在实例详情页面，您可以查看和操作数据库的各种信息，包括设置维护信息以及在实例架构图中添加“只读实例”。 |
 | 系统监控   | 在实例监控页面，您可以查看当前数据库运行的众多核心指标的监控，详细介绍请参见 [监控功能](https://cloud.tencent.com/document/product/238/7524) 和 [告警功能](https://cloud.tencent.com/document/product/238/43293)。 |
-| 备份恢复   | 在实例备份恢复页，您可查询备份恢复历史记录和新建备份恢复任务，备份上传方式支持 直接上传文件和从 COS 下载文件，恢复方式支持全量备份文件，全量备份文件 + 日志文件，全量备份文件 + 差异备份。 |
+| 备份恢复   | 在实例备份恢复页，您可查询备份恢复历史记录和新建备份恢复任务，备份上传方式支持直接上传文件和从 COS 下载文件，恢复方式支持全量备份文件，全量备份文件 + 日志文件，全量备份文件 + 差异备份。 |
 | 发布订阅   | 在发布订阅页面，您可以创建、删除一个或多个发布订阅链路服务，详细介绍请参见 [发布订阅](https://cloud.tencent.com/document/product/238/43327)。 |
 | 安全组     | 在安全组页面，您可以对数据库进行安全组的配置操作，详细介绍请参见 [配置安全组](https://cloud.tencent.com/document/product/238/43287)。 |
 | 帐号管理   | 在帐号管理页面，您可以对管理员帐号进行管理，如修改权限、重置密码等，也可以创建帐号、删除帐号，详细介绍请参见 [帐号管理](https://cloud.tencent.com/document/product/238/7521)。 |
