--- a/product/数据库/云存储Redis/操作指南/升级实例/升级实例架构.md
+++ b/product/数据库/云存储Redis/操作指南/升级实例/升级实例架构.md
@@ -54,7 +54,7 @@
 <td><ul><li>立即切换：立即执行切换动作。</li><li>维护时间窗切换：在实例的维护时间窗内，执行切换动作，维护时间可在实例详情页的<strong>维护时间窗</strong>处修改。</li></ul></td></tr>
 <tr>
 <td>总费用</td>
-<td>升级架构之后的费用。<ul><li> <strong>按量计费</strong>：实例升级架构之后每小时的计费单价。单击<strong>计费详情</strong>，可查看计费项目、计费公式，确认费用。</li> <li><strong>包年包月</strong>：实例升级架构后每月的费用。</li></ul></td></tr>
+<td>升级架构之后的费用。<ul><li> <strong>按量计费</strong>：实例升级架构之后每小时的计费单价。单击<strong>计费详情</strong>，可查看计费项目、计费公式，确认费用。</li> <li><strong>包年包月</strong>：实例升级架构后的总费用。</li></ul></td></tr>
 </tbody></table> 
 7. 升级到集群架构版本存在命令兼容性风险，单击**兼容性说明文档**，确认兼容风险后，单击**确定**，继续升级。
 8. 支付完成后，返回实例列表，待实例状态变为**运行中**，在实例列表或实例详情中查看实例的架构版本已经为升级后的集群架构。
