--- a/product/数据库/云数据库SQL Server/购买指南/备份空间收费说明.md
+++ b/product/数据库/云数据库SQL Server/购买指南/备份空间收费说明.md
@@ -3,7 +3,7 @@
 备份空间是用于存储某个地域下所有云数据库 SQL Server 实例的备份文件，备份文件由自动数据备份、手动数据备份以及日志备份组成。
 
 **备份空间范围**
-指一个账号的备份空间用于存储某个地域下所有云数据库 SQL Server（基础版/高可用版/集群版）的备份文件，即：以地域为维度来计算备份的空间，一个账号下的每个地域单独计算，北京地域的所有云数据库 SQL Server 实例的备份文件在一个资源池来统计；上海地域的所有云数据库 SQL Server 实例的备份文件在一个资源池来统计。
+指一个账号下用于存储某个地域下所有云数据库 SQL Server（基础版/高可用版/集群版）备份文件的资源池，备份的空间以地域为维度来计算，一个账号下的每个地域单独计算，北京地域的所有云数据库 SQL Server 实例的备份文件在一个资源池来统计；上海地域的所有云数据库 SQL Server 实例的备份文件在一个资源池来统计。
 
 **备份空间组成**
 备份空间中的备份文件由自动数据备份、手动数据备份、日志备份组成。
@@ -86,4 +86,7 @@
 | 归档业务             | 建议数据备份保留时间设置为7天，根据实际业务需求手动备份数据，用完及时删除 |
 | 测试业务             | 建议数据备份保留时间设置为7天，根据实际业务需求手动备份数据，用完及时删除 |
 
+## 相关文档
+- [设置自动备份](https://cloud.tencent.com/document/product/238/70165)
+- [查看备份空间](https://cloud.tencent.com/document/product/238/70168)
 
