--- a/product/教育/腾讯教育智脑/常见问题.md
+++ b/product/教育/腾讯教育智脑/常见问题.md
@@ -11,5 +11,5 @@
 腾讯教育智脑可进行本地或云上私有化部署。
 
 ### 在哪里可以体验腾讯教育智脑？		
-若需体验腾讯教育智脑，您可单击 [联系我们](https://cloud.tencent.com/apply/p/9mibampqnef)，填写相应信息，提交线上申请。
+若需体验腾讯教育智脑，您可单击 [联系我们](https://cloud.tencent.com/apply/p/m97qlqdomy)，填写相应信息，提交线上申请。
 更多详情可查看 [腾讯教育智脑官网](https://tec.qq.com/)。
