--- a/product/数据库/云数据库MySQL/操作指南/操作总览.md
+++ b/product/数据库/云数据库MySQL/操作指南/操作总览.md
@@ -11,7 +11,7 @@
 | 重启 | 在实例列表，勾选需要重启的实例，单击**重启**对实例进行重启操作，支持批量重启（勾选多个实例）。<li>重启期间，实例将无法正常访问，已有的连接会断掉，请您做好准备，以免造成影响。<li>重启期间，如果业务写入量很大，脏页过多，会导致重启失败。重启失败后，实例回到重启之前状态，实例仍可访问。<li>请确保在业务低峰期重启，保证重启成功率，降低对业务的影响。</li>|
 
 ## 实例管理页
-登录 [云数据库 MySQL 控制台](https://console.cloud.tencent.com/cdb)，初始化完成后，在实例列表，单击实例 ID 或在**操作**列的**管理**，可以进入实例管理页面。您可以进行实例详情查看、实例监控、数据库管理等操作。
+登录 [云数据库 MySQL 控制台](https://console.cloud.tencent.com/cdb)，在实例列表，单击实例 ID 或在**操作**列的**管理**，可以进入实例管理页面。您可以进行实例详情查看、实例监控、数据库管理等操作。
 ![](https://qcloudimg.tencent-cloud.cn/raw/a8164882231f9cd45448d9b058e6c4fe.png)
 
 | 功能 | 介绍 | 
