--- a/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
+++ b/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
@@ -1,7 +1,7 @@
 ## 背景信息
-腾讯云计划于2022年4月30日停止新账号创建跨地域对等连接服务，2022年6月30日停止存量账号新增跨地域对等连接服务，2022年10月31日将停止跨地域对等连接所有服务。为了保证您的业务更加稳定，质量更优，请参考本文，及时将您的跨地域对等连接服务迁移至云联网。
+云联网和对等连接均可以实现跨地域 VPC 间互通，相比对等连接，云联网具有链路全互联、路由自学习、配置简单、稳定可靠，更低成本和时延等优势。
+为满足您更优的业务体验，本文提供跨地域对等连接迁移至云联网的迁移方案和指导。
 
-如果迁移过程中有任何疑问，请联系您的商务经理获取腾讯云技术支持，或 [提交工单](https://console.cloud.tencent.com/workorder/category) 进行反馈。
 ## 操作场景
 + **场景一**：南京 VPC1 和 VPC2 通过对等连接打通。
 **迁移方案**：可将两个 VPC 关联至云联网来实现跨地域 VPC 间互通。
@@ -33,16 +33,16 @@
 ## 操作步骤
 >?
 >+ 以场景一为例，给出操作步骤。
->+ 场景二中相比场景一为多 VPC 间全互通，请将 VPC 逐一加入云联网，并及时确认云联网及 VPC 中的路由情况，当网段 CIDR 有冲突时，路由状态将显示“失效”，请参考 [路由冲突处理原则](https://cloud.tencent.com/document/product/877/18854#lyct) 处理即可。
+>+ 场景二中相比场景一为多 VPC 间全互通，请将 VPC 逐一加入云联网，并及时确认云联网及 VPC 中的路由情况，当因网段重叠等原因导致路由产生冲突时，则路由状态为无效，请分别参考[ 云联网路由冲突处理原则](https://cloud.tencent.com/document/product/877/18679#.E8.B7.AF.E7.94.B1.E9.99.90.E5.88.B6)、[VPC 路由冲突处理原则](https://cloud.tencent.com/document/product/877/18854#lyct) 处理即可。
 >+ 场景三和场景四，请提前根据子网间的通信情况，为子网配置合适的 [ACL 策略](https://cloud.tencent.com/document/product/215/36727)，再逐一关联 VPC 网络至云联网，并将路由迁移至云联网，期间可通过监控实时查看业务情况。
 >
 1. [创建1个云联网实例](https://cloud.tencent.com/document/product/877/18752)，并关联VPC1。
  ![](https://qcloudimg.tencent-cloud.cn/raw/83b11e969f8309f101499e528ba7ce62.png)
-2. 单击云联网 ID，并进入路由表页签，可看到云联网路由表中，目的端为 VPC1 子网的路由策略。
+2. 单击云联网 ID，并进入路由表页签，可看到云联网路由表中，目的端为 VPC1 子网的路由策略，云联网路由添加逻辑，可参考[ 云联网路由概述](https://cloud.tencent.com/document/product/877/38801)。
 ![](https://qcloudimg.tencent-cloud.cn/raw/44e7be2fcb8c27e3a7fd6d5dde42b4ba.png)
 3. 请参见 [关联网络实例](https://cloud.tencent.com/document/product/877/18747) 将 VPC2 关联至云联网。
-4. 再次单击云联网 ID，进入路由表页签，可看到云联网路由表中，新增目的端为 VPC2 子网的路由策略。
-    ![](https://qcloudimg.tencent-cloud.cn/raw/4d5860c1bd45b14e6864fafb747a38f3.png)
+4. 再次单击云联网 ID，进入路由表页签，可看到云联网路由表中，新增目的端为 VPC2 子网的路由策略，云联网侧路由如有状态异常，请参见[ 云联网路由冲突处理原则 ](https://cloud.tencent.com/document/product/877/18679#.E8.B7.AF.E7.94.B1.E9.99.90.E5.88.B6)处理。
+ ![](https://qcloudimg.tencent-cloud.cn/raw/4d5860c1bd45b14e6864fafb747a38f3.png)
 5. 分别查看 VPC1 和 VPC2 子网关联的路由表，可看到路由策略中均新增一条下一跳到云联网的路由策略，但根据路由冲突原则，目的端网段重叠时，后加入的路由不生效，因此此时 VPC1 和 VPC2 通信依然走的是对等连接。
  ![](https://qcloudimg.tencent-cloud.cn/raw/a0c345c403ed77d2a3fc4e8351acfed2.png)
 ![](https://qcloudimg.tencent-cloud.cn/raw/8081e9e5b5540a4c220569ae5017ec01.png)
