--- a/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
+++ b/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
@@ -46,7 +46,7 @@
 5. 分别查看 VPC1 和 VPC2 子网关联的路由表，可看到路由策略中均新增一条下一跳到云联网的路由策略，但根据路由冲突原则，目的端网段重叠时，后加入的路由不生效，因此此时 VPC1 和 VPC2 通信依然走的是对等连接。
  ![](https://qcloudimg.tencent-cloud.cn/raw/a0c345c403ed77d2a3fc4e8351acfed2.png)
 ![](https://qcloudimg.tencent-cloud.cn/raw/8081e9e5b5540a4c220569ae5017ec01.png)
-6. <span id="step6">请参考 [启用路由策略](https://cloud.tencent.com/document/product/215/53587#.E5.90.AF.E7.94.A8.2F.E7.A6.81.E7.94.A8.E8.B7.AF.E7.94.B1.E7.AD.96.E7.95.A5) 在 VPC1 的路由表中，启用 VPC1 到 VPC2 指向云联网的路由策略，并禁用 VPC1 到 VPC2 指向对等连接的路由策略，此时 VPC1 到 VPC2 走的是云联网，VPC2 到 VPC1 仍然走的是对等连接。
+6. <span id="step6">请参考 [启用路由策略](https://cloud.tencent.com/document/product/215/53587#.E5.90.AF.E7.94.A8.2F.E7.A6.81.E7.94.A8.E8.B7.AF.E7.94.B1.E7.AD.96.E7.95.A5) 在 VPC1 的路由表中，启用 VPC1 到 VPC2 指向云联网的路由策略，并禁用 VPC1 到 VPC2 指向对等连接的路由策略，此时 VPC1 到 VPC2 走的是云联网，VPC2 到 VPC1 仍然走的是对等连接，链路可正常通信。
   ![](https://qcloudimg.tencent-cloud.cn/raw/aeb20b566d225898d41a720ef4c6e765.png)
 7. 查看监控或[ 登录CVM](https://cloud.tencent.com/document/product/213/5436) ping 网络查看流量是否正常，监控查看方式请参见[查看云联网监控数据](https://cloud.tencent.com/document/product/877/18755)、[查看跨地域对等连接监控数据](https://cloud.tencent.com/document/product/553/18842)。如不正常请回退后联系[ 在线支持](https://cloud.tencent.com/online-service)。
     ![](https://qcloudimg.tencent-cloud.cn/raw/0b107fad18337e7359249f53939ad706.png)
