--- a/product/企业协同/腾讯会议/API 文档/REST APIs/企业会议管理/修改会议.md
+++ b/product/企业协同/腾讯会议/API 文档/REST APIs/企业会议管理/修改会议.md
@@ -24,7 +24,7 @@ https://api.meeting.qq.com/v1/meetings/{meetingId}
 |invitees|否 |[用户对象 UserObj](#UserObj) |调用方用于标示用户的唯一 ID，仅支持邀请与会议创建者同企业的成员（企业内部请使用企业唯一用户标识；OAuth2.0 鉴权用户请使用 openId）。<br>企业唯一用户标识说明：<li>企业对接 SSO 时使用的员工唯一标识 ID。<li>企业调用创建用户接口时传递的 userid 参数。<br>注意：仅腾讯会议商业版和企业版可邀请参会者，邀请者列表仅支持300人；需要邀请超过300人的场景请调用 [设置会议邀请成员](https://cloud.tencent.com/document/product/1095/63659) 接口。|
 |start_time|否 |String  |会议开始时间戳（单位秒）。|
 |end_time|否 |String  |会议结束时间戳（单位秒）。|
-|password（\*） |否 |String  |会议密码（4~6位数字），可不填。如果将字段值改为空字符串""，则表示取消会议密码。|
+|password |否 |String  |会议密码（4~6位数字），可不填。如果将字段值改为空字符串""，则表示取消会议密码。|
 |settings |否 |Object   |会议的配置，可为缺省配置。|
 |meeting_type |否 |integer   |默认值为0。  <br>0：普通会议<br>1：周期性会议|
 |recurring_rule |否 |Object   |周期性会议配置，meeting_type 为1时必填。|
