--- a/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
+++ b/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
@@ -33,15 +33,15 @@
 ## 操作步骤
 >?
 >+ 以场景一为例，给出操作步骤。
->+ 场景二中相比场景一为多 VPC 间全互通，请将 VPC 逐一加入云联网，并及时确认云联网及 VPC 中的路由情况，当因网段重叠等原因导致路由产生冲突时，则路由状态为无效，请分别参考[ 云联网路由冲突处理原则](https://cloud.tencent.com/document/product/877/18679#.E8.B7.AF.E7.94.B1.E9.99.90.E5.88.B6)、[VPC 路由冲突处理原则](https://cloud.tencent.com/document/product/877/18854#lyct) 处理即可。
+>+ 场景二中相比场景一为多 VPC 间全互通，请将 VPC 逐一加入云联网，并及时确认云联网及 VPC 中的路由情况。当因网段重叠等原因导致路由产生冲突时，路由状态将为无效，请分别参考[ 云联网路由冲突处理原则](https://cloud.tencent.com/document/product/877/18679#.E8.B7.AF.E7.94.B1.E9.99.90.E5.88.B6)、[VPC 路由冲突处理原则](https://cloud.tencent.com/document/product/877/18854#lyct) 处理即可。
 >+ 场景三和场景四，请提前根据子网间的通信情况，为子网配置合适的 [ACL 策略](https://cloud.tencent.com/document/product/215/36727)，再逐一关联 VPC 网络至云联网，并将路由迁移至云联网，期间可通过监控实时查看业务情况。
 >
 1. [创建1个云联网实例](https://cloud.tencent.com/document/product/877/18752)，并关联VPC1。
  ![](https://qcloudimg.tencent-cloud.cn/raw/83b11e969f8309f101499e528ba7ce62.png)
-2. 单击云联网 ID，并进入路由表页签，可看到云联网路由表中，目的端为 VPC1 子网的路由策略，云联网路由添加逻辑，可参考[ 云联网路由概述](https://cloud.tencent.com/document/product/877/38801)。
+2. 单击云联网 ID，并进入路由表页签，可看到云联网路由表中，目的端为 VPC1 子网的路由策略。云联网路由添加逻辑，可参考[ 云联网路由概述](https://cloud.tencent.com/document/product/877/38801)。
 ![](https://qcloudimg.tencent-cloud.cn/raw/44e7be2fcb8c27e3a7fd6d5dde42b4ba.png)
 3. 请参见 [关联网络实例](https://cloud.tencent.com/document/product/877/18747) 将 VPC2 关联至云联网。
-4. 再次单击云联网 ID，进入路由表页签，可看到云联网路由表中，新增目的端为 VPC2 子网的路由策略，云联网侧路由如有状态异常，请参见[ 云联网路由冲突处理原则 ](https://cloud.tencent.com/document/product/877/18679#.E8.B7.AF.E7.94.B1.E9.99.90.E5.88.B6)处理。
+4. 再次单击云联网 ID，进入路由表页签，可看到云联网路由表中，新增目的端为 VPC2 子网的路由策略。云联网侧路由如有状态异常，请参见[ 云联网路由冲突处理原则 ](https://cloud.tencent.com/document/product/877/18679#.E8.B7.AF.E7.94.B1.E9.99.90.E5.88.B6)处理。
  ![](https://qcloudimg.tencent-cloud.cn/raw/4d5860c1bd45b14e6864fafb747a38f3.png)
 5. 分别查看 VPC1 和 VPC2 子网关联的路由表，可看到路由策略中均新增一条下一跳到云联网的路由策略，但根据路由冲突原则，目的端网段重叠时，后加入的路由不生效，因此此时 VPC1 和 VPC2 通信依然走的是对等连接。
  ![](https://qcloudimg.tencent-cloud.cn/raw/a0c345c403ed77d2a3fc4e8351acfed2.png)
