Update and rename errorCode.md to 错误码.md

--- a/product/视频服务/移动直播/旧版文档/基础功能/连麦互动(RTMP方案)/错误码.md
+++ b/product/视频服务/移动直播/旧版文档/基础功能/连麦互动(RTMP方案)/错误码.md
@@ -15,7 +15,7 @@
 | 202002    | 连接IM鉴权 server 失败                                         |
 | 202003    | IM 鉴权服务器的响应不合法                                     |
 | 202004    | 登出失败，可能是后台删除记录失败                             |
-| 202005    |  SDKAppID 没有对应的 AppID                                      |
+| 202005    |  sdkappid 没有对应的 appid                                      |
 | 202006    | 请求太频繁导致被限频                                         |
 | 203002    | 创建房间失败                                                 |
 | 203003    | 销毁房间失败                                                 |
