--- a/product/视频服务/移动直播/旧版文档/基础功能/连麦互动(RTMP方案)/错误码.md
+++ b/product/视频服务/移动直播/旧版文档/基础功能/连麦互动(RTMP方案)/错误码.md
@@ -2,10 +2,10 @@
 | :-------- | :----------------------------------------------------------- |
 | 200100    | 请求包错误，HTTP 方法错误或参数错误                           |
 | 200101    |  JSON 请求体无法解析                                           |
-| 201001    | login 操作中无 sdk_appid 或 user sig                             |
-| 201002    | 缺少 user id                                                  |
-| 201003    |  URL 中的 userid 与 body 中的 userid 不一致                          |
-| 201004    | 操作缺少 room id 参数                                          |
+| 201001    | login 操作中无 sdk_appid 或 user_sig                             |
+| 201002    | 缺少 user_sig                                                 |
+| 201003    |  URL 中的 user_id 与 body 中的 user_id 不一致                          |
+| 201004    | 操作缺少 room_id 参数                                          |
 | 201005    | 获取 room 列表中，count 参数未设置或设置为0                     |
 | 201006    | 云端混流参数缺少 interface 等必要参数                          |
 | 201007    | 设置自定义字段时，自定义字段名称为空或着自定义操作（set/dec/inc）为空 |
@@ -40,3 +40,4 @@
 | 207004    | 获取自定义字段出错                                           |
 | 207005    | 不支持的用户操作                                             |
 | 207006    | 不支持的房间类型                                             |
+
