doc: 最佳实践代码

--- a/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
+++ b/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
@@ -392,14 +392,14 @@ const lipList = await sdk.getEffectList({
 	PageNumber: 0,
 	PageSize: 10,
 	Name: '',
-	Label: '唇妆', // 用特效的标签筛选
+	Label: ['唇妆'], // 用特效的标签筛选
 	Type: 'Custom'
 })
 const eyeList = await sdk.getEffectList({
 	PageNumber: 0,
 	PageSize: 10,
 	Name: '',
-	Label: '眼妆', // 用特效的标签筛选
+	Label: ['眼妆'], // 用特效的标签筛选
 	Type: 'Custom'
 })
 // 设置特效
@@ -427,7 +427,7 @@ let filterList = [];
 sdk.on('created', () => {
 	// 在 created 回调中拉取特效和滤镜列表供页面展示
 	sdk.getEffectList({
-		Label: 'xxx'
+		Label: ['aaa','bbb']
 	}).then(res => {
 		effectList = res
 	});
@@ -541,7 +541,7 @@ effect:{
 	PageNumber: number,
 	PageSize: number,
 	Name: '',
-	Label: string|Array,
+	Label: Array,
 	Type: 'Custom|Preset'
 }</pre>
 </td>
