--- a/product/视频服务/美视优享/Web美颜特效/最佳实践/美颜特效小程序实践.md
+++ b/product/视频服务/美视优享/Web美颜特效/最佳实践/美颜特效小程序实践.md
@@ -102,7 +102,8 @@ const token = ''; // 此处请填写您自己的参数
 
 Component({
 	data: {
-		effectList: [],
+		makeupList: [],
+		stickerList: [],
 		filterList: [],
 		recording: false
 	},
@@ -166,9 +167,12 @@ Component({
 						label: item.Label,
 						type: item.PresetType,
 					}));
+					const makeupList = list.filter(item=>item.label.indexOf('美妆')>=0)
+        			const stickerList = list.filter(item=>item.label.indexOf('贴纸')>=0)
 					// 渲染特效列表
 					this.setData({
-						effectList: list
+						makeupList,
+						stickerList
 					});
 				}).catch((e) => {
 					console.log(e);
@@ -210,8 +214,14 @@ Component({
 				dermabrasion: val.dermabrasion, // 磨皮 0-1
 			});
 		},
-		// 改变特效，需要确保sdk ready
-		onChangeEffect(id, intensity){
+		// 改变美妆，需要确保sdk ready
+		onChangeMakeup(id, intensity){
+			if(!this._sdkReady) return
+			// 使用setEffect设置特效，setEffect的输入参数支持三种格式，详见SDK接入指南
+			this.ar.setEffect([{id, intensity}]);
+		},
+		// 改变贴纸，需要确保sdk ready
+		onChangeSticker(id, intensity){
 			if(!this._sdkReady) return
 			// 使用setEffect设置特效，setEffect的输入参数支持三种格式，详见SDK接入指南
 			this.ar.setEffect([{id, intensity}]);
