--- a/product/视频服务/点播/播放器 SDK 手册/Web 端集成/超级播放器/接入指引.md
+++ b/product/视频服务/点播/播放器 SDK 手册/Web 端集成/超级播放器/接入指引.md
@@ -246,13 +246,12 @@
 
 
 </Table>
-
->?
->
->- 视频编码格式仅支持 H.264 编码。
->- Chrome、Firefox 包括 Windows、macOS 平台。
->- Chrome、Firefox、Edge 及 QQ 浏览器播放 HLS 需要加载 `hls.js`。
->- Referer 防盗链功能是基于 HTTP 请求头的 Referer 字段实现的，部分 Android 浏览器发起的 HTTP 请求不会携带 Referer 字段。
+<dx-alert infotype="explain" title="">
+- 视频编码格式仅支持 H.264 编码。
+- Chrome、Firefox 包括 Windows、macOS 平台。
+- Chrome、Firefox、Edge 及 QQ 浏览器播放 HLS 需要加载 `hls.js`。
+- Referer 防盗链功能是基于 HTTP 请求头的 Referer 字段实现的，部分 Android 浏览器发起的 HTTP 请求不会携带 Referer 字段。
+</dx-alert>
 
 播放器兼容常见的浏览器，播放器内部会自动区分平台，并使用最优的播放方案。例如：在 Chrome 等现代浏览器中优先使用 HTML5 技术实现视频播放，而手机浏览器上会使用 HTML5 技术或者浏览器内核能力实现视频播放。
 
