--- a/product/数据库/云存储Redis/操作指南/维护管理实例/变更实例规格.md
+++ b/product/数据库/云存储Redis/操作指南/维护管理实例/变更实例规格.md
@@ -65,7 +65,7 @@
 <td>对比当前配置与之后的配置：包括分片数、分片规格、副本数、总容量、连接总数、最大流量。</td></tr>
 <tr>
 <td>配置变更费用</td>
-<td><ul> <li> <strong>按量计费</strong>：实例调整配置后每小时的计费单价。单击<strong>计费详情</strong>，可查看计费项目、计费公式，确认费用。</li> <li><strong>包年包月</strong>：实例调整配置后每月的费用。</li></ul></td></tr>
+<td><ul> <li> <strong>按量计费</strong>：实例调整配置后每小时的计费单价。单击<strong>计费详情</strong>，可查看计费项目、计费公式，确认费用。</li> <li><strong>包年包月</strong>：实例调整配置后的总费用。</li></ul></td></tr>
 </tbody></table>
   - 选择**配置变更** > **增加副本**，在**云数据库 Redis 配置变更**页面，在**副本数量**后面的下拉列表选择调整后的副本数量。其余参数与扩容节点的参数类似。多可用区实例增加副本的具体操作，请参见[ 多可用区实例增加副本](https://cloud.tencent.com/document/product/239/71620)。
   - 选择**配置变更** > **删除副本**，在**云数据库 Redis 配置变更**页面，在**副本数量**后面的下拉列表选择调整后的副本数量。其余参数与扩容节点的参数类似。
@@ -99,7 +99,7 @@
 <td>对比当前配置与扩容之后的配置：包括分片数、分片规格、副本数、总容量、连接总数、最大流量。</td></tr>
 <tr>
 <td>配置变更费用</td>
-<td><ul> <li> <strong>按量计费</strong>：实例调整配置后每小时的计费单价。单击<strong>计费详情</strong>，可查看计费项目、计费公式，确认费用。</li> <li><strong>包年包月</strong>：实例调整配置后每月的费用。</li></ul></td></tr>
+<td><ul> <li> <strong>按量计费</strong>：实例调整配置后每小时的计费单价。单击<strong>计费详情</strong>，可查看计费项目、计费公式，确认费用。</li> <li><strong>包年包月</strong>：实例调整配置后的总费用。</li></ul></td></tr>
 </tbody></table>
    - 选择**配置变更** > **增加副本**，在**云数据库 Redis配置变更**页面，在**副本数量**后面的下拉列表选择调整后的副本数量。其余参数与扩容节点的参数类似。多可用区实例增加副本的具体操作，请参见 [多可用区实例增加副本](https://cloud.tencent.com/document/product/239/71620)。
    - 选择**配置变更** > **删除副本**，在**云数据库 Redis配置变更**页面，在**副本数量**后面的下拉列表选择调整后的副本数量。其余参数与扩容节点的参数类似。
