--- a/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
+++ b/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
@@ -1,6 +1,6 @@
 ## 背景信息
-云联网和对等连接均可以实现跨地域 VPC 间互通，相比对等连接，云联网具有链路全互联、路由自学习、配置简单、稳定可靠，更低成本和时延等优势。
-为满足您更优的业务体验，本文提供跨地域对等连接迁移至云联网的迁移方案和指导。
+云联网和对等连接均可以实现跨地域 VPC 间互通，相比对等连接，云联网具有链路全互联、路由自学习、配置简单、稳定可靠、更低成本和时延等优势。
+为提供更优的业务体验，本文提供跨地域对等连接迁移至云联网的迁移方案和指导。
 
 ## 操作场景
 + **场景一**：南京 VPC1 和 VPC2 通过对等连接打通。
@@ -16,12 +16,12 @@
  + 迁移后：
 ![](https://qcloudimg.tencent-cloud.cn/raw/e37dea0447ab9d0c9e97ebccb16b29b0.png)
 + **场景三**：VPC1 通过对等连接分别与 VPC2、VPC3 打通，VPC2 和 VPC3 之间不互通。
-  **迁移方案**：可使用云联网打通 VPC1 和 VPC2、VPC3，VPC2 和 VPC3 之间的不互通可通过子网关联网络ACL 来实现访问控制，即 ACL 中仅放通需要通信的网段即可。
+  **迁移方案**：可使用云联网打通 VPC1 和 VPC2、VPC3，VPC2 和 VPC3 之间的不互通可通过子网关联网络 ACL 来实现访问控制，即 ACL 中仅放通需要通信的网段即可。
 	迁移前：
 	![](https://qcloudimg.tencent-cloud.cn/raw/028d1f8c79caf9325bc0a8c92da10f5d.png)
 	迁移后：
 	![](https://qcloudimg.tencent-cloud.cn/raw/ad50a87a987b054cf27562a826a9379d.png)
-+ **场景四**：VPC1 与 VPC2、VPC3 分别通过对等连接通信，VPC2 和 VPC3 不通，其中 VPC1 的子网11和 VPC2 的子网21、VPC3 的子网31 通信；VPC1 的子网12与 VPC2 的子网22、VPC3 的子网32通信；VPC1 的子网13与 VPC2 的子网23、VPC3 的子网33通信。
++ **场景四**：VPC1 与 VPC2、VPC3 分别通过对等连接通信，VPC2 和 VPC3 不通，其中 VPC1 的子网11和 VPC2 的子网21、VPC3 的子网31通信；VPC1 的子网12与 VPC2 的子网22、VPC3 的子网32通信；VPC1 的子网13与 VPC2 的子网23、VPC3 的子网33通信。
 >?子网间的访问控制通过各自的网络 ACL 来实现，例如 VPC2 的子网21的网络 ACL21，出入站仅放通需要通信的 VPC1 的子网11的网段，其余网段将均被拒绝，以此来达到子网间流量访问控制的目的。
 >
 **迁移方案**：可使用云联网打通 VPC1、VPC2、VPC3，由于云联网会使得 VPC1、VPC2、VPC 全互通，因此请提前确认好各个子网的 ACL 规则确保其只放通了需要通信的子网网段即可。
@@ -44,11 +44,13 @@
 4. 再次单击云联网 ID，进入路由表页签，可看到云联网路由表中，新增目的端为 VPC2 子网的路由策略。云联网侧路由如有状态异常，请参见[ 云联网路由冲突处理原则 ](https://cloud.tencent.com/document/product/877/18679#.E8.B7.AF.E7.94.B1.E9.99.90.E5.88.B6)处理。
  ![](https://qcloudimg.tencent-cloud.cn/raw/4d5860c1bd45b14e6864fafb747a38f3.png)
 5. 分别查看 VPC1 和 VPC2 子网关联的路由表，可看到路由策略中均新增一条下一跳到云联网的路由策略，但根据路由冲突原则，目的端网段重叠时，后加入的路由不生效，因此此时 VPC1 和 VPC2 通信依然走的是对等连接。
+VPC1 子网路由表：
  ![](https://qcloudimg.tencent-cloud.cn/raw/a0c345c403ed77d2a3fc4e8351acfed2.png)
+VPC2 子网路由表：
 ![](https://qcloudimg.tencent-cloud.cn/raw/8081e9e5b5540a4c220569ae5017ec01.png)
 6. <span id="step6">请参考 [启用路由策略](https://cloud.tencent.com/document/product/215/53587#.E5.90.AF.E7.94.A8.2F.E7.A6.81.E7.94.A8.E8.B7.AF.E7.94.B1.E7.AD.96.E7.95.A5) 在 VPC1 的路由表中，启用 VPC1 到 VPC2 指向云联网的路由策略，并禁用 VPC1 到 VPC2 指向对等连接的路由策略，此时 VPC1 到 VPC2 走的是云联网，VPC2 到 VPC1 仍然走的是对等连接，链路可正常通信。
   ![](https://qcloudimg.tencent-cloud.cn/raw/aeb20b566d225898d41a720ef4c6e765.png)
-7. 查看监控或[ 登录CVM](https://cloud.tencent.com/document/product/213/5436) ping 网络查看流量是否正常，监控查看方式请参见[查看云联网监控数据](https://cloud.tencent.com/document/product/877/18755)、[查看跨地域对等连接监控数据](https://cloud.tencent.com/document/product/553/18842)。如不正常请回退后联系[ 在线支持](https://cloud.tencent.com/online-service)。
+7. 查看监控或[ 登录 CVM](https://cloud.tencent.com/document/product/213/5436) ping 网络查看流量是否正常，监控查看方式请参见[ 查看云联网监控数据](https://cloud.tencent.com/document/product/877/18755)、[查看跨地域对等连接监控数据](https://cloud.tencent.com/document/product/553/18842)。如不正常请回退后联系[ 在线支持](https://cloud.tencent.com/online-service)。
     ![](https://qcloudimg.tencent-cloud.cn/raw/0b107fad18337e7359249f53939ad706.png)
 8. 请参考 <a href ="#step6">步骤6</a> 在 VPC2 的路由表中，启用 VPC2 到 VPC1 指向云联网的路由策略，并禁用 VPC2 到 VPC1 指向对等连接的路由策略。
 9. 请查看监控或查看 ping 流量是否正常。
