--- a/product/存储与CDN/内容分发网络/最佳实践/第三方教程.md
+++ b/product/存储与CDN/内容分发网络/最佳实践/第三方教程.md
@@ -6,5 +6,5 @@
 >- 第三方教程均来自 [云+社区](https://cloud.tencent.com/developer) ，仅供学习和参考。
 
 ## 文档入口
-[使用腾讯云 CDN 加速 wordpress](https://cloud.tencent.com/developer/article/1959818)
+[使用腾讯云 CDN 加速 WordPress](https://cloud.tencent.com/developer/article/1959818)
 [使用腾讯云 CVM + 宝塔 + CDN 加速小程序应用](https://cloud.tencent.com/developer/article/1970171)
