--- a/product/移动与通信/即时通信/2购买指南/购买指引.md
+++ b/product/移动与通信/即时通信/2购买指南/购买指引.md
@@ -1,4 +1,4 @@
-## 前提条件
+\## 前提条件
  已 [注册腾讯云](https://cloud.tencent.com/document/product/378/17985) 帐号并完成 [实名认证](https://cloud.tencent.com/document/product/378/3629)。
 
 ## 操作步骤
@@ -21,7 +21,7 @@
      </tr> 
 	 <tr>      
          <td nowrap="nowrap">可选增值功能</td>   
-				 <td>请根据实际需求选择增值功能，包含<b>单个用户可加入群组数上限</b>、<b>单个群成员数上限 (非直播群)</b>、<b>安全打击服务</b>以及<b>延长历史消息存储时长</b>等。</ul></td>   
+				 <td>请根据实际需求选择增值功能，包含<b>单个用户可加入群组数上限</b>、<b>单个群成员数上限 (非直播群)</b>、<b>延长历史消息存储时长</b>等。</ul></td>   
      </tr> 
 	 <tr> 
 	     <td>购买时长</td>   
