--- a/product/移动与通信/即时通信/2购买指南/购买指引.md
+++ b/product/移动与通信/即时通信/2购买指南/购买指引.md
@@ -1,4 +1,4 @@
-\## 前提条件
+## 前提条件
  已 [注册腾讯云](https://cloud.tencent.com/document/product/378/17985) 帐号并完成 [实名认证](https://cloud.tencent.com/document/product/378/3629)。
 
 ## 操作步骤
