--- a/product/监控与管理/腾讯云助手/产品简介.md
+++ b/product/监控与管理/腾讯云助手/产品简介.md
@@ -9,7 +9,7 @@
 支持查看账号余额，进行微信充值或线下对公充值。可查看账号下待续费资源，配置续费或自动续费。可查看已有代金券，兑换新代金券。可查看账号内收支明细、订单明细，支持收支和订单的筛选查看。
 
 ### 消息管理
-可查看腾讯云平台公告。可通过关注“腾讯云助手”公众号，接收账户相关通知，包括账号欠费续费通知、工单进度通知、备案进度通知、监控告警通知、安全事件通知等。
+可查看腾讯云平台公告。可通过关注“腾讯云助手”公众号，接收账号相关通知，包括账号欠费续费通知、工单进度通知、备案进度通知、监控告警通知、安全事件通知等。
 
 ### 工单管理
 支持快速提交工单，与客服实时沟通以获得帮助。可进行工单留言补充、工单评价打分。
