--- a/product/监控与管理/访问控制/用户指南/身份管理/用户管理/用户信息.md
+++ b/product/监控与管理/访问控制/用户指南/身份管理/用户管理/用户信息.md
@@ -1,12 +1,13 @@
 ## 操作场景
 本文档介绍如何查看和修改子账号用户名、备注、手机等信息。
 
-## 查看用户信息
+## 操作步骤
+### 查看用户信息
 1. 登录访问管理控制台，进入 [用户列表](https://console.cloud.tencent.com/cam) 管理页面，找到需要查看用户信息的子账号。
 2. 单击**用户名称**，进入用户详情页面。
 3. 可在页面上方查看当前子账号的用户信息（含用户名、备注、手机、邮箱、是否允许微信通知）。
 
-## 修改用户信息
+### 修改用户信息
 1. 登录访问管理控制台，进入 [用户列表](https://console.cloud.tencent.com/cam) 管理页面，找到需要修改用户信息的子账号。
 2. 单击**用户名称**，进入用户详情页，单击相应的修改入口，修改用户信息：
 ![](https://qcloudimg.tencent-cloud.cn/raw/875dee8606e478874091212840f26ee9.png)
