--- a/product/计算与网络/云服务器/产品简介/专有预扣资源池.md
+++ b/product/计算与网络/云服务器/产品简介/专有预扣资源池.md
@@ -47,7 +47,7 @@
 您可通过以下案例，充分理解重复抵扣：
 已创建1台实例1个月时长的循环抵扣包，并抵扣该资源包成功创建实例，此时预扣包中可抵扣数量为0。由于循环抵扣包支持重复抵扣，若在使用一段时间后将该实例退还，且预扣包未过期，实例资源将资源退回预扣包，资源包的剩余资源量回复为1，若预扣包过期，资源将退回大盘。
 
-## 使用限制
+## 使用限制[](id:usageRestrictions)
 - **预扣资源包创建成功后不支持退还。**
 - 不同的资源预扣包类型，支持抵扣不同类型的实例：
  -  单次抵扣包仅支持抵扣 [包年包月](https://cloud.tencent.com/document/product/213/2180#.E5.8C.85.E5.B9.B4.E5.8C.85.E6.9C.88) 云服务器实例。
