--- a/product/移动与通信/即时通信/10控制台指南/创建应用与升级.md
+++ b/product/移动与通信/即时通信/10控制台指南/创建应用与升级.md
@@ -1,4 +1,4 @@
-## 操作场景
+、## 操作场景
 本文指导您如何在即时通信 IM 控制台创建体验版应用获取 SDKAppID，以及指导您如何将体验版应用升级为专业版应用。
 
 ## 前提条件
@@ -23,7 +23,7 @@
 
 
 1. 单击目标应用卡片区域的**查看可升级项**，即可查看对比可升级项。
-![](https://qcloudimg.tencent-cloud.cn/raw/140a95a729dd8516c7d385d0ded10d4e.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/b5b07dd82efae26b3ab6581fa825fafd.png)
 2. 单击**对比升级项**窗口下方**升级套餐包**，进入即时通信 IM 套餐包购买页。
 3. 根据实际需求设置以下参数：
   <table>
@@ -49,8 +49,6 @@
      </tr> 
 </table>
 
-![](https://qcloudimg.tencent-cloud.cn/raw/70fabe2f1e0aabad02e0aa631995d6a1.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/e52e9d4b00838bdf1ce09f3e738276a1.png)
 4. 勾选**我已阅读并同意 《[腾讯云即时通信 IM 服务等级协议](https://cloud.tencent.com/document/product/269/34004)》**，单击**立即购买**。
 5. 核对所选信息，选择是否使用代金券，单击**确认购买**，完成支付流程。
-
-
