--- a/product/管理与支持/计费相关(new)/购买流程/充值/对公汇款/银企直联专属账号汇款.md
+++ b/product/管理与支持/计费相关(new)/购买流程/充值/对公汇款/银企直联专属账号汇款.md
@@ -25,7 +25,7 @@
 
 当您已添加好户名后页面即会展示您的腾讯云专属收款账号，当您操作转账时直接输入以下付款银行信息即可。
 ![](https://qcloudimg.tencent-cloud.cn/raw/4ef3d3f561abfe53dd056d37cc3eb2a6.png)
-- 可单击发送短信将专属账号信息免费发送至您预留信息的手机上。
+- 可单击**发送短信**将专属账号信息免费发送至您预留信息的手机上。
 - 可单击右端的**专属账号电子证明下载**将专属账号信息下载至您的电脑上，方便下次转账时查询信息。
 
 >! 
