--- a/product/计算与网络/容器服务/Prometheus 监控服务/10 计费方式和资源使用.md
+++ b/product/计算与网络/容器服务/Prometheus 监控服务/10 计费方式和资源使用.md
@@ -6,22 +6,20 @@
 
 TMP 上线了“收费指标采集速率”的能力，您可以用该数值估算监控实例/集群/采集对象/指标等多个维度的预估费用：
 
-1. 登录 [容器服务控制台 ](https://console.cloud.tencent.com/tke2)，选择左侧导航栏中的 **[Prometheus 监控](https://console.cloud.tencent.com/tke2/prometheus2)**，如下图所示：
-2. 有一列名为：“收费指标采集速率”。表示该 TMP 实例的收费指标采集速率，根据用户的指标上报量和采集频率预估算出。该数值乘以 86400 则为一天的监控数据点数，根据[按量计费](https://cloud.tencent.com/document/product/1416/65379)可以计算预估的监控数据刊例价。
-
+1. 登录 [容器服务控制台 ](https://console.cloud.tencent.com/tke2)，选择左侧导航栏中的 **[Prometheus 监控](https://console.cloud.tencent.com/tke2/prometheus2)**。
+2. 在 Prometheus 监控列表中，查看“收费指标采集速率”。该指标表示 TMP 实例的收费指标采集速率，根据用户的指标上报量和采集频率预估算出。该数值乘以 86400 则为一天的监控数据点数，根据 [按量计费](https://cloud.tencent.com/document/product/1416/65379) 可以计算预估的监控数据刊例价。
 ![](https://qcloudimg.tencent-cloud.cn/raw/a1873bf5707e78ad1592ac6d6ed8a307.png)
-
-3. 除了上述页面，您也可以在“关联集群”、“数据采集配置”、“指标详情”等多个页面查看到不同维度下的“收费指标采集速率”。
+您也可以在“关联集群”、“数据采集配置”、“指标详情”等多个页面查看到不同维度下的收费指标采集速率。
 
 ### EKS 集群
 
-每创建一个 Prometheus 监控实例后，会在用户的账户下创建一个按量付费 EKS 集群，用于数据采集。在 [EKS 控制台](https://console.cloud.tencent.com/tke2/ecluster?rid=33) 上可查看资源信息，如下图所示：
-![](https://qcloudimg.tencent-cloud.cn/raw/3771290a1abca09b36cfa469f9854fc1.png)
+每创建一个 Prometheus 监控实例后，会在用户的账户下创建一个按量付费 EKS 集群，用于数据采集。在 [弹性集群列表页](https://console.cloud.tencent.com/tke2/ecluster) 查看资源信息，如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/9d1de29fbe253ea39bfede7c41efc877.png)
 
 #### 注意事项
 
 该 EKS 集群的名称为 Prometheus 监控服务**实例的 ID**，集群描述里面说明为 “Prometheus监控专用，请勿修改或删除”。
-![](https://qcloudimg.tencent-cloud.cn/raw/60a9b6112a94d59f6cdcc37426eb1b31.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/f95655d0a14ca71e13e891d4bdeadb81.png)
 
 #### 计费
 
