--- a/product/管理与支持/计费相关(new)/常见问题/充值常见问题/在线充值相关.md
+++ b/product/管理与支持/计费相关(new)/常见问题/充值常见问题/在线充值相关.md
@@ -1,7 +1,7 @@
 ### 为何操作充值时网页打不开？无法充值？
 
 1. 建议您先清除浏览器缓存，刷新网页，再重新进行充值操作。
-2. 若您支付的页面提示“暂时无法获取微信支付二维码”，“暂时无法获取微信支付二维码”，请选择其他支付方式；或者**网银支付**成灰色，建议您 [提交工单](https://console.cloud.tencent.com/workorder/category) 处理。
+2. 若您支付的页面提示“暂时无法获取微信支付二维码”，“暂时无法获取微信支付二维码”，请选择其他支付方式；或者**网银支付**页面的**立即支付按钮呈灰色**，建议您 [提交工单](https://console.cloud.tencent.com/workorder/category) 处理。
 
 >? 针对短时间内多个支付账号向同一个 UIN 进行在线充值时，可能会出现系统限频拦截，为了保证账户安全，顺利支付，请不要频繁充值或对个支付账号向同一个账号支付。
 >
