--- a/product/计算与网络/负载均衡/购买指导/产品属性选择.md
+++ b/product/计算与网络/负载均衡/购买指导/产品属性选择.md
@@ -79,7 +79,7 @@
 
 
 ## [实例名](id:instance-name)
-负载均衡实例的名称，长度限制为1 - 60个字符。
+负载均衡实例的名称，长度限制为1 - 60个字符，允许字母、数字、中文字符、-(中横线)、_(下划线)、.(英文标点)。
 
 ## [购买数量](id:quantity)
 购买的负载均衡实例数量，配额详情请参见 [使用约束](https://cloud.tencent.com/document/product/214/6187)。
