--- a/product/计算与网络/容器服务/Prometheus 监控服务/5 精简监控指标.md
+++ b/product/计算与网络/容器服务/Prometheus 监控服务/5 精简监控指标.md
@@ -20,7 +20,7 @@ Prometheus 监控服务提供了一百多个免费的基础监控指标，完整
 3. 在“集群监控”页面，单击集群右侧的**数据采集配置**，进入采集配置列表页。
 4. 基础指标支持通过产品化的页面增加/减少采集对象，单击右侧的“指标详情”：
 ![](https://qcloudimg.tencent-cloud.cn/raw/9de837959c957045aba9ea0e1afbb418.png)
-5. 在以下页面您可以查看到每个指标是否免费，指标勾选表示会采集这些指标，建议您取消勾选付费指标，以免造成额外的成本，付费指标计算详情见 [Prometheus 监控服务按量计费](https://cloud.tencent.com/document/product/1416/65379)。
+5. 在以下页面您可以查看到每个指标是否免费，指标勾选表示会采集这些指标，建议您取消勾选付费指标，以免造成额外的成本。仅基础监控提供免费的监控指标，完整的免费指标详情见 [按量付费免费指标](https://cloud.tencent.com/document/product/457/72136)。付费指标计算详情见 [Prometheus 监控服务按量计费](https://cloud.tencent.com/document/product/1416/65379)。
 ![](https://qcloudimg.tencent-cloud.cn/raw/97ec47c4f83d403096d6c1e00c8de57f.png)
 
 ### 通过 YAML 精简指标
