--- a/product/管理与支持/计费相关(new)/常见问题/充值常见问题/对公汇款充值相关.md
+++ b/product/管理与支持/计费相关(new)/常见问题/充值常见问题/对公汇款充值相关.md
@@ -4,9 +4,8 @@
  - 若您对公汇款的收款银行账号是15位数字，银行账号为110907316810601，则是 [旧版对公汇款](https://cloud.tencent.com/document/product/555/72293)。
  旧版对公汇款在您打款后，还需要您前往**旧版对公汇款查询页面提交汇款单**。
  若汇款信息无误，我们的工作人员将在3个工作日内为您完成充值。您也前往 [旧版对公汇款相关](https://cloud.tencent.com/document/product/555/73176) 了解更多信息。
- - 若您对公汇款的收款银行账号25位数字，25位专属账号由**前15位固定的11090 73168 10601+后10位专属识别码**组成，则是 [银企直联专属账号汇款](https://cloud.tencent.com/document/product/555/9901)。
- 一般到账时间为1天以内。您可前往 [对公汇款](https://console.cloud.tencent.com/expense/rechargeoffline) 查询。
- 若无充值记录，请核实打款的账号是否有误，您可联系参考银行的汇款单。您也可前往 [银企直联专属账号汇款相关](https://cloud.tencent.com/document/product/555/73175) 了解更多信息。
+ - 若您对公汇款的收款银行账号25位数字，25位专属账号由**前15位固定的11090 73168 10601+后10位专属识别码**组成，则是 [银企直联专属账号汇款](https://cloud.tencent.com/document/product/555/9901)。一般到账时间为1天以内。您可前往 [对公汇款](https://console.cloud.tencent.com/expense/rechargeoffline) 查询。
+ 若无充值记录，请核实打款的账号是否有误，您可联系银行咨询或者查看银行汇款信息是否有误。您也可前往 [银企直联专属账号汇款相关](https://cloud.tencent.com/document/product/555/73175) 了解更多信息。
 2. 旧版对公汇款成功后一般3个工作日到账，银企直联打款后一般最快2小时，最慢一天到账。外汇打款因银行结汇时间一般为5个工作日，且在腾讯云提交汇款信息后3个工作日，故时间大致在5-7个工作日。具体到账时间主要依赖银行系统。
 
 ### 为何打款后银行把款项退回来了？
