--- a/product/移动与通信/应用服务平台/动态与公告/公告/云开发升级新计费套餐.md
+++ b/product/移动与通信/应用服务平台/动态与公告/公告/云开发升级新计费套餐.md
@@ -1,9 +1,9 @@
 
 为更好帮助各位用户简化开发流程、专注业务经营，云开发计划将于2022年6月，对计费方式进行如下升级：
 
-新计费模式下将以实际调用资源的 DAU（日活跃用户数量）作为配额套餐的主要指标，开发者可根据应用的DAU直接选择套餐即可，无需再过多关心详细资源指标。当应用的 DAU 超过套餐配额时，可开启超限不停服，为额外超出套餐配额的 DAU 付费。
+新计费模式下将不再区分“预付费”与“按量付费”模式，统一采用**实际调用云开发资源的 DAU**（日活跃用户数量）作为配额的主要指标，开发者可根据 DAU 预期直接选择套餐，无需再过多关心详细资源技术指标。当应用的实际 DAU 超过套餐配额时，可开启“超限不停服”功能，为超配额的 DAU 单独付费。该 DAU 配额下的资源可以满足大部分业务正常使用，特殊情况下在即将超过技术指标最高配额时会有相应的提醒调整配额通知。
 
-## 套餐详情
+
 套餐概况如下：
 <table>
 <thead>
@@ -28,46 +28,20 @@
 <td>10000</td>
 <td>900</td>
 </tr>
-</tbody></table>
-
-
-
-## 超限费用
-若当日该环境 DAU 超出套餐配额，且开启超限不停服后，将在第二天按照超限后 DAU 所达到的套餐配额收取对应费用。
-<table>
-<thead>
 <tr>
-<th style = "width:30%">配额名称</th>
-<th style = "width:20%">DAU</th>
-<th>超限后达到该配额所需费用（元/日）</th>
-</tr>
-</thead>
-<tbody><tr>
-<td>初创团队版</td>
-<td>500</td>
-<td>15</td>
-</tr>
-<tr>
-<td>中小企业版</td>
-<td>2000</td>
-<td>50</td>
-</tr>
-<tr>
-<td>标准企业版</td>
-<td>10000</td>
-<td>150</td>
-</tr>
-<tr>
-<td>超出标准企业版</td>
-<td>不限制</td>
-<td>300</td>
+<td>旗舰企业版</td>
+<td colspan = "2">可联系邮箱：marilynliu@tencent.com，由云架构师提供定制化服务</td>
 </tr>
 </tbody></table>
 
-## 相关说明
-- 在正式进行计费方式切换之日起，对现有用户均提供一个月的操作缓冲期，用户可选择合适的套餐进行切换；对现有免费配额的环境将提供一张代金券。
-- 自本公告发布之日起，现有预付费环境的套餐不支持续费超过一个月，现有按量付费环境的资源包不支持新购。
-- 对于 DAU 超过10000的应用，本次暂不做调整。
+更多信息请查看 [计费说明]( https://cloud.tencent.com/document/product/876/73182)。
 
-云开发将继续为各位用户提供简单易的专业开发服务，再次感谢大家的支持！
+在正式进行计费方式切换之日起，对现有用户均提供一个月的操作缓冲期，用户可选择合适的套餐进行切换；对现有免费配额的环境将提供一张代金券。
+
+自本公告发布之日起，现有预付费环境的套餐不支持续费超过一个月，现有按量付费环境的资源包不支持新购。
+
+对于过去一个月 **实际调用云开发资源的 DAU** 曾超过10000的应用，本次暂缓不做调整。后续将有云架构师对接提供定制化调整服务。
+
+腾讯云云开发将继续为各位用户提供简单易用的专业开发服务，再次感谢大家的支持！
+
 
