--- a/product/计算与网络/负载均衡/快速入门/负载均衡快速入门.md
+++ b/product/计算与网络/负载均衡/快速入门/负载均衡快速入门.md
@@ -26,7 +26,7 @@
 3. 在“监听器管理”页签中的“HTTP/HTTPS 监听器”区域下，单击**新建**。
 ![](https://main.qcloudimg.com/raw/2e1fcb0c301893859413d33bdc280e93.png)
 4. 在“创建监听器”对话框中，配置以下内容，配置完成后，单击**提交**。
-  - 监听器名称。
+  - 监听器名称，名称可输入60个字符，允许英文字母、数字、中文字符、“-”、“_”、“.”。
   - 监听协议端口。例如 `HTTP：80`。
 
 ### 配置监听器的转发规则
