--- a/product/移动与通信/即时通信/2购买指南/价格说明.md
+++ b/product/移动与通信/即时通信/2购买指南/价格说明.md
@@ -16,7 +16,7 @@
 
 ## 计费组成
 即时通信 IM 的计费包括：[基础服务资费](#jc) 和 [增值服务资费](#zz)，如下图所示：
-<img src="https://main.qcloudimg.com/raw/a6c64a6d1f8cbf3f4c53b6b419f93f8a.svg">
+<img src="https://qcloudimg.tencent-cloud.cn/raw/518049b20266ae7debb8a63eb3b2eee3.png">
 
 <table>
 <tr>
