--- a/product/移动与通信/即时通信/2购买指南/价格说明.md
+++ b/product/移动与通信/即时通信/2购买指南/价格说明.md
@@ -16,7 +16,7 @@
 
 ## 计费组成
 即时通信 IM 的计费包括：[基础服务资费](#jc) 和 [增值服务资费](#zz)，如下图所示：
-<img src="https://qcloudimg.tencent-cloud.cn/raw/661d8f88c6847f1d279ffd5ff2b23522.png">
+<img src="https://qcloudimg.tencent-cloud.cn/raw/4422c3e6a19d9074f9fe0e41085bfbe8.svg">
 
 <table>
 <tr>
