--- a/product/移动与通信/云开发低代码平台/操作指南/数据源与数据管理/自定义连接器/新建自定义连接器.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/数据源与数据管理/自定义连接器/新建自定义连接器.md
@@ -65,7 +65,7 @@ exports.main = async (event, context) => {
             host: process.env.HOST,
             user: process.env.USERNAME,
             password: process.env.PASSWORD,
-            port: process.env.PORT,
+            port: process.env.PORT,x
             database: process.env.DB,
         });
         console.log('已连接')
