--- a/product/计算与网络/无服务器云函数/购买指南/免费额度.md
+++ b/product/计算与网络/无服务器云函数/购买指南/免费额度.md
@@ -43,10 +43,17 @@
   </tr>
 </table>
 
->?
->- 如果2021年11月01日之前已使用过 SCF 云函数并产生过调用，以上内容从2021年11月01日起生效。
->- 如果2021年11月01日之前未使用过 SCF 云函数，从用户开通云函数后，第一次产生函数调用的时间开始生效。
->- 免费额度不包含 Web 函数响应流量，Web 函数计费详情见 [Web 函数计费说明](https://cloud.tencent.com/document/product/583/66237)。
+
+<dx-alert infotype="explain" title="">
+- 如果2021年11月01日之前已使用过 SCF 云函数并产生过调用，以上内容从2021年11月01日起生效。
+- 如果2021年11月01日之前未使用过 SCF 云函数，从用户开通云函数后，第一次产生函数调用的时间开始生效。
+- 免费额度不包含 Web 函数响应流量，Web 函数计费详情见 [Web 函数计费说明](https://cloud.tencent.com/document/product/583/66237)。
+</dx-alert>
+
+
+
+
+
 
 下表标明在配置为不同内存时，常规免费额度方案下单个函数每月可免费运行的时长：
 
