--- a/product/企业协同/腾讯会议/API 文档/REST APIs/企业会议管理/修改会议.md
+++ b/product/企业协同/腾讯会议/API 文档/REST APIs/企业会议管理/修改会议.md
@@ -3,7 +3,7 @@
  - 企业 secret 鉴权用户可修改任何该企业该用户创建的有效会议，OAuth2.0 鉴权用户只能修改通过 OAuth2.0 鉴权创建的有效会议。
  - 当您想实时监测会议修改状况时，您可以通过订阅 [会议更新](https://cloud.tencent.com/document/product/1095/51615) 的事件，接收事件通知。
  - 本接口的邀请参会成员限制调整至300人。
- - 当会议为周期性会议时，主持人密钥每场会议固定，但单场会议只能获取一次。支持持修改周期性会议的主持人密钥。
+ - 当会议为周期性会议时，主持人密钥每场会议固定，但单场会议只能获取一次。支持修改周期性会议的主持人密钥。
 - **调用方式**：PUT
 - **接口请求域名**：
 ```plaintext
