--- a/product/存储与CDN/安全加速/购买指南/安全防护包计费说明.md
+++ b/product/存储与CDN/安全加速/购买指南/安全防护包计费说明.md
@@ -1,4 +1,4 @@
-安全防护包是一种预付费资源包，用于抵扣安全加速（Secure Content Delivery Network，SCDN）使用过程中所产生的安全防护流量消耗。相较于按量计费方式，安全防护包具有较高的折扣优惠，您可自行选择购买。
+安全防护包是一种预付费资源包，用于抵扣安全加速（Secure Content Delivery Network，SCDN）使用过程中所产生的超出套餐内发放用量以外的超额安全防护流量消耗。相较于按量计费方式，安全防护包具有较高的折扣优惠，您可自行选择购买。
 
 ## 安全防护包价格表
 
@@ -86,7 +86,7 @@
 
 1. 续订功能开启：您可前往 [服务管理](https://buy.cloud.tencent.com/scdn_package) > **防护包列表**页面，调整安全防护包的“自动续订”配置。
 2. 续订功能限制：仅支持开启一种规格系数（同规格、同有效期）的安全防护包用尽续订。
-例如：开启了100G（1年有效期）安全防护包的用尽续订，不能再开启100G（1个月有效期）的安全防护包的用尽续订。
+   例如：开启了100G（1年有效期）安全防护包的用尽续订，不能再开启100G（1个月有效期）的安全防护包的用尽续订。
 
 ## 购买须知
 
@@ -95,12 +95,12 @@
 安全防护包即时生效，到期时间为在生效时间基础上，叠加流量包有效期。
 **示例说明：** 假设您在2022年02月15日 13:15:00购买了一个有效期为12个月的安全防护包，其有效期起始时间为：2022年02月15日 13:15:00，结束时间为2023年02月15日 12:59:59。
 
->? 不受小时结、月结后付费周期影响。
+> ? 不受小时结、月结后付费周期影响。
 
 ### 抵扣说明
 
 1. 无论您的域名加速类型为中国境内、中国境外还是全球加速，安全防护包的抵扣范围适用于为全球地区，不区分地域。
-**示例说明：** 若您目前有一个500GB的安全防护包，在使用 安全加速 SCDN 时，在中国境内消耗50GB安全防护量，在中国境外消耗50GB安全防护量，抵扣完成后，该安全防护包剩余400GB。
+   **示例说明：** 若您目前有一个500GB的安全防护包，在使用 安全加速 SCDN 时，在中国境内消耗50GB安全防护量，在中国境外消耗50GB安全防护量，抵扣完成后，该安全防护包剩余400GB。
 2. 安全防护包不可用于抵扣 CDN 流量、ECDN 流量，仅适用于 SCDN 安全防护流量抵扣。
 
 ### 抵扣顺序
@@ -112,13 +112,13 @@
 3. 不满足前两点的情况下，未使用包的抵扣优先级为：临近有效期包 > 金额更小包 > 购买自动续订抵扣包；
 4. 若计费用量产生时，检测到您的账户下没有提前预购安全防护包，则会进入安全防护量后付费。
 
->? 若账户下某一时刻同时存在来源为“续订”和“自主购买”两种未使用的包，则抵扣优先级需判断未使用“自主购买”包和“续订”包的有效期。若未使用“自主购买包”有效期近，先抵扣“自主购买”包，再扣“续订”包；反之，先抵扣“续订”包，再抵扣“自主购买”包。
+> ? 若账户下某一时刻同时存在来源为“续订”和“自主购买”两种未使用的包，则抵扣优先级需判断未使用“自主购买”包和“续订”包的有效期。若未使用“自主购买包”有效期近，先抵扣“自主购买”包，再扣“续订”包；反之，先抵扣“续订”包，再抵扣“自主购买”包。
 
 ### 抵扣时间
 
 前1小时产生的消耗，会在后2 - 4小时内进行结算并抵扣。
 
->? 不受小时结、月结后付费周期影响。
+> ? 不受小时结、月结后付费周期影响。
 
 ## 退费说明
 
