--- a/product/移动与通信/云开发低代码平台/模板/模板中心/产品知识库/产品知识库模板搭建.md
+++ b/product/移动与通信/云开发低代码平台/模板/模板中心/产品知识库/产品知识库模板搭建.md
@@ -3,6 +3,7 @@
 ## 知识库模板概述
 
 产品知识库模板由小程序和 Web 应用两部分内容组成，其中 Web 应用主要使用微搭的模型应用，小程序主要使用自定义应用。
+![](https://qcloudimg.tencent-cloud.cn/raw/3ae12112d5a4a636feb04568bc06ed3c.png)
 
 ## 产品知识库管理平台模板操作步骤
 
@@ -118,7 +119,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/9dcdb512160f24b583e409a892cb542a.png)
 2. 在创建页面中选择 [步骤2](#step2) 创建的**用户问题**和**知识管理**两个**数据模型**。单击**创建页面**，应用页面基本由数据模型自动生成。
 ![](https://qcloudimg.tencent-cloud.cn/raw/6ec294ab7dd8b4e5ff564b2e4a4eb963.png)
-3. 页面包括知识管理的列表、新增、编辑、查看页面和用户问题的列表、新增、编辑、查看页面。
+3. 模板页面包括知识管理的列表、新增、编辑、查看页面和用户问题的列表、新增、编辑、查看页面。
 ![](https://qcloudimg.tencent-cloud.cn/raw/814ea92ee80b7de31b9653f05af85efd.png)
 4. 在**创建知识管理**右侧，单击**克隆**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/4551114e2fb5f85ec391e0b9ce6cb1f3.png)
@@ -126,72 +127,40 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/354b58f636e25b04883cd5e746ea1e2b.png)
 6. 进入**页面设置**页，将**页面名称**设置为**回复用户问题**，单击**确定**。
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/23baf0736881d88f631f9eab94a2c50f.png" style ="width:50%"> 
-7. 打开各个页面并选中**内容**组件下的子组件，可在属性区域对调整字段、修改标题、筛选条件、配置按钮。
+7. 打开各个页面并选中**内容**组件下的子组件，可在属性区域对调整字段、修改标题、筛选条件和配置按钮。
  - **调整字段**：选中组件树中的组件，在右侧组件**属性**中单击**选择字段**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/7dd84f5f1ae1361072179c74aab9ef1c.png)
   选择要显示的字段并调整顺序后，单击**确定**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/b02bf834e85ef675d236a31f09816136.png)
- - **修改标题**：选中组件树中的组件，在组件属性中找到“页面标题”，修改成自定义内容。
-
-  ![](https://qcloudimg.tencent-cloud.cn/raw/d5e9ad8e2ae021875fc28eb3eb01da5f.png)
-
-- 筛选条件
-
-  选中组件树中的组件，在组件属性中找到“条件筛选”。
-
-  ![](https://qcloudimg.tencent-cloud.cn/raw/49cb25828e4e8f2fa1f6192ec51d3bee.png)
-
-​		选中“筛选字段”，打开弹框，选择要显示的字段和调整顺序。
-
-​		![](https://qcloudimg.tencent-cloud.cn/raw/ad981de37477ff0cb4fede05eb9e92a5.png)
-
-- 配置按钮
-
-  选中组件树中的组件，在组件属性中找到“顶部按钮配置”和“操作列按钮配置”。
-
-  ![](https://qcloudimg.tencent-cloud.cn/raw/9b6e4aa7ef94ae3f59dec26186888b0f.png)
-
+ - **修改标题**：选中组件树中的组件，在组件属性中找到**页面标题**，修改成自定义内容。
+![](https://qcloudimg.tencent-cloud.cn/raw/4f4871130c18725474d3794db75d68bc.png)
+ - **筛选条件**：选中组件树中的组件，在右侧组件**属性**中选择**条件筛选**。
+![](https://qcloudimg.tencent-cloud.cn/raw/4f0c79c4d2f179ffc00d5c650918d450.png)
+选择要显示的字段和调整顺序后，单击**确定**。
+![](https://qcloudimg.tencent-cloud.cn/raw/993d42a3b15b1b3af9fb9c0531dbe9bc.png)
+ - **配置按钮**：选中组件树中的组件，在组件属性中找到**顶部按钮配置**和**操作列按钮配置**。
+![](https://qcloudimg.tencent-cloud.cn/raw/694d937958f48f94c70742060dc3cd5b.png)
   根据需要调整按钮配置。
+![](https://qcloudimg.tencent-cloud.cn/raw/4f6593d472ea5e5e16c7fef5b03d7fe1.png)
+8. 进入**用户问题列表**页面，在问题列表页面**操作**列选中**回复**。
+![](https://qcloudimg.tencent-cloud.cn/raw/f0d6234f205c8df82e66c143fbbf1e92.png)
+进入右侧**选区属性**，然后给**回复**操作添加**页面跳转**事件，选择跳转到问题回复页面。
+![](https://qcloudimg.tencent-cloud.cn/raw/24d97ae8f95770e08ee7757ef0454473.png)
 
-  ![](https://qcloudimg.tencent-cloud.cn/raw/58a6f4e3f6dd3ea4d066c997fbd05486.png)
+### 步骤4：搭建工作流
 
-  3.5 关联页面
-
-  在问题列表页面增加【回复】操作，然后给回复操作添加“页面跳转”事件，选择跳转到问题回复页面。
-
-  ![](https://qcloudimg.tencent-cloud.cn/raw/57fb7331b993907f0855efb7965bde14.png)
-
-  ![](https://qcloudimg.tencent-cloud.cn/raw/5e374f28ef570c015e91de81dfc1d887.png)
-
-### 工作流
-
-1.创建工作流
-
-在编辑应用的顶部选择“工作流”
-
+1. 单击左上角**工作流**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/a4d71ce750555d53ea287e175ee68e82.png)
-
-进入工作流管理模块，选择“新建工作”
-
-![](https://qcloudimg.tencent-cloud.cn/raw/cc0f8deb2320ff82b23b7194c2263073.png)
-
-在新建工作流表单中输入工作流名称，选择“数据触发流”
-
+2. 进入**流程列表**页面，单击**新建流程**创建工作流。
+![](https://qcloudimg.tencent-cloud.cn/raw/773f9007fc55a168d8e10b1917e560a2.png)
+3. 在新建工作流表单中输入工作流名称，工作流类型选择**数据触发流**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/059552b8e781668535305eaa6da2b3da.png)
-
-2.配置工作流
-
-选中“数据触发流”节点，在属性中配置信息。
-
-![](https://qcloudimg.tencent-cloud.cn/raw/fc37171bfca0cb2a37496d85d1da8288.png)
-
-选择“+”添加节点按钮，选择“操作数据表”节点
-
-![](https://qcloudimg.tencent-cloud.cn/raw/7b08faf83de1d7ae49374436871cc7a6.png)
-
-选中“操作数据表”节点，设置信息。
-
-![](https://qcloudimg.tencent-cloud.cn/raw/be37327f5347534f5779f2e1cf625470.png)
+4. 完成新建后进入**流程编辑器**页面，选中**数据触发流**，在属性中配置以下信息。
+![](https://qcloudimg.tencent-cloud.cn/raw/1644498c22bcebd1d046fb2ff277f003.png)
+5. 选择**添加节点按钮**，**自动化执行节点**选择**操作数据表**。
+![](https://qcloudimg.tencent-cloud.cn/raw/fe9df6bbe15dcab2743bb1c59cd29b90.png)
+选中**操作数据表**节点，设置以下信息。
+![](https://qcloudimg.tencent-cloud.cn/raw/4c5f053e0fc81bb69f8f0acd1e721b5a.png)
 
 ## 产品知识小程序模板操作步骤
 
