--- a/product/存储与CDN/安全加速/购买指南/套餐到期与续费说明.md
+++ b/product/存储与CDN/安全加速/购买指南/套餐到期与续费说明.md
@@ -4,17 +4,19 @@
 
 如果您无需调整当前使用的套餐，且未来需要继续使用 SCDN，请于控制台在套餐到期前续费套餐。
 
->? 安全加速套餐续费成功后，将自动在服务概览页更新套餐**失效时间**（即，到期时间）。
+> ? 安全加速套餐续费成功后，将自动在服务概览页更新套餐**失效时间**（即，到期时间）。
 
 ## 操作步骤
 
 1. 登录 [控制台](https://console.cloud.tencent.com/cdn)，选择左侧菜单**服务概览**。
 2. 进入服务概览页面，查看右侧 安全加速 SCDN 套餐信息，单击**续费**可进入套餐升级入口。
-![](https://qcloudimg.tencent-cloud.cn/raw/00cb557e713f41476e353b6fa69e21f4.jpg)
+   ![](https://qcloudimg.tencent-cloud.cn/raw/00cb557e713f41476e353b6fa69e21f4.jpg)
 3. 确定续费时长，单击**立即续费**即可延长套餐有效期。续费后，套餐的到期时间会**按自然月**自动顺延续期。
-![](https://qcloudimg.tencent-cloud.cn/raw/50a521a819cf249c4cfc3a17224028ca.jpg)
+   ![](https://qcloudimg.tencent-cloud.cn/raw/50a521a819cf249c4cfc3a17224028ca.jpg)
 
 例如：您在2022-04-08 16:24:06 购买 SCDN 入门版套（1个月有效期），续费一个月，套餐新的到期时间为：2022-05-08 16:24:06 。
+
+>? 如您需要开启/关闭套餐的自动续费，可前往 [费用中心 - 续费管理](https://console.cloud.tencent.com/account/renewal)。
 
 ## 到期提醒与续费须知
 
