--- a/product/管理与支持/计费相关(new)/常见问题/充值常见问题/旧版对公汇款相关.md
+++ b/product/管理与支持/计费相关(new)/常见问题/充值常见问题/旧版对公汇款相关.md
@@ -19,3 +19,7 @@
 
 您可登录费用中心，在 [旧版对公汇款查询](https://console.cloud.tencent.com/expense/rechargeofflineold) 页面查询充值进度，也可以前往 [收支明细](https://console.cloud.tencent.com/expense/transactions) 页面查看所有充值到账记录。
 
+
+### 财务打款按照发票的账号操作打款了怎么办？
+腾讯云的发票账号与旧版的对公汇款账号实质为同一账号，若您是打款至 `11090 73168 10601` 这个账号，可以直接按照 [旧版对公汇款流程](https://cloud.tencent.com/document/product/555/72293) 在控制台提交汇款信息，提交成功后大致3个工作日左右我们会安排工作人工帮您充值，您也可以前往 [旧版对公汇款查询](https://console.cloud.tencent.com/expense/rechargeofflineold) 页面查看充值进度。如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/a7befd5bb335e1e12ea053d8faa673e8.png)
