--- a/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
+++ b/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
@@ -34,7 +34,7 @@
 </tr> 
 <tr>
 <td align="left">弹性防护量</td>
-<td align="left">即，WEB 弹性防护请求数、BOT 弹性防护请求数。当 WEB 攻击或 BOT 攻击请求超出 SCDN 安全防护套餐内用量时，对超出的防护量进行按量付费。</td>
+<td align="left">即，Web 弹性防护请求数、BOT 弹性防护请求数。当 Web 攻击或 BOT 攻击请求超出 SCDN 安全防护套餐内用量时，对超出的防护量进行按量付费。</td>
 <td align="left">否</td>
 <td align="left">后付费按实际用量小时结算。前1小时产生的消耗，会在后2 - 4小时内计算并扣费。</td>
 <td align="left">Web 防护：0.18元/万次请求<br>BOT防护：0.3元/万次请求</td>
