--- a/product/移动与通信/云开发低代码平台/模板/模板中心/产品知识库/产品知识库模板搭建.md
+++ b/product/移动与通信/云开发低代码平台/模板/模板中心/产品知识库/产品知识库模板搭建.md
@@ -162,154 +162,80 @@
 选中**操作数据表**节点，设置以下信息。
 ![](https://qcloudimg.tencent-cloud.cn/raw/4c5f053e0fc81bb69f8f0acd1e721b5a.png)
 
-## 产品知识小程序模板操作步骤
+## 产品知识小程序模板介绍
+以下将会为您介绍小程序模板中每个页面各个组件的参数设置。
 
 ### 知识库页面
 
-1.页面创建
-
-创建自定义空白页面，页面命名“知识库”，设置成主页。
-
+1. **页面创建**：创建自定义空白页面，页面命名“知识库”，设置成主页。
 ![](https://qcloudimg.tencent-cloud.cn/raw/e840d6ba9504b71870be973f98c05e9b.png)
-
-2.组件设置
-
-增加两组“分组列表容器”和一组“Tab栏”组件。
-
+2. **组件设置**：增加两组“分组列表容器”和一组 “Tab 栏”组件。
 ![](https://qcloudimg.tencent-cloud.cn/raw/0291773f3faac1610aeab7795141c5b4.png)
-
-2.1 Tab栏组件
-
-基础属性
-
-- “选中页面”选择“知识库（index）”
-- “布局模式”选择“icon+文字”
-- “tab配置”设置“知识库”、“我的问题”、“新增问题”，并设置内置样式、跳转页面等信息
-
+ - Tab 栏组件
+    - 基础属性设置：
+      - “选中页面”选择“知识库（index）”
+      - “布局模式”选择“icon+文字”
+      - “tab配置”设置“知识库”、“我的问题”、“新增问题”，并设置内置样式、跳转页面等信息
 ![](https://qcloudimg.tencent-cloud.cn/raw/4e598c30cfb5019152fbb587c3a2e4d9.png)
-
-2.2 第一组“分组列表容器”组件
-
-分组容器:
-
-基础属性
-
-- 删除标题内容
-
+  -  第一组“分组列表容器”组件：
+		-  分组列表容器：
+			-  基础属性设置：删除标题内容
   ![](https://qcloudimg.tencent-cloud.cn/raw/b58721af879851c937a730df39871ba9.png)
-
-  
-
-表单输入组件:
-
-基础属性
-
-- 字段绑定“wthf”
-- 字段标题“知识查询”
-- 占位符设置“请输入查询内容”
-
+		- 单行输入组件：
+			- 基础属性设置：
+				- 字段绑定“wthf”
+				- 字段标题“知识查询”
+				- 占位符设置“请输入查询内容”
 ![](https://qcloudimg.tencent-cloud.cn/raw/b9968880929be7dabb26e3bf96696843.png)
-
-行为
-
-- 输入改变增加“变量赋值”事件
-
-- 增加变量“wthf”
-
+				- 行为：
+					- 输入改变增加“变量赋值”事件
+					- 增加变量“wthf”
   ![](https://qcloudimg.tencent-cloud.cn/raw/c0fcb13325bf7cf9087c88385ba2092a.png)
-
-  
-
-- 变量赋值事件中给变量“wthf”赋值
-
-![](https://qcloudimg.tencent-cloud.cn/raw/40413ed7dffefd6852c22610a24b600d.png)
-
-
-
-2.3 第二组“分组列表容器”组件
-
-分组容器:
-
-基础属性
-
-- 删除标题内容
-
+					- 变量赋值事件中给变量“wthf”赋值
+![](https://qcloudimg.tencent-cloud.cn/raw/40413ed7dffefd6852c22610a24b600d.png) 
+ - 第二组“分组列表容器”组件：
+		- 分组容器：
+			- 基础属性设置：删除标题内容
   ![](https://qcloudimg.tencent-cloud.cn/raw/b58721af879851c937a730df39871ba9.png)
-
-标题组件:
-
-基础属性
-
-- 标题设置“知识库列表”
-
-- 大小选择“4”
-
-- 对齐选择“左”
-
+		- 标题组件：
+			- 基础属性设置：
+				- 标题设置“知识库列表”
+				- 大小选择“4”
+				- 对齐选择“左”
   ![](https://qcloudimg.tencent-cloud.cn/raw/4d69e6b54fe77eb559deddf0a82cd28d.png)
-
-  列表视图:
-
-  基础属性
-
-  - 数据模型选择“知识管理”
-
-  - 增加变量“sfhf”
-
+			- 列表视图：
+				- 基础属性设置：
+					- 数据模型选择“知识管理”
+					- 增加变量“sfhf”
     ![](https://qcloudimg.tencent-cloud.cn/raw/30ee220ec45395bd142ddfcec98102d2.png)
+					- 数据筛选条件设置“是否公布”字段等于变量“sfhf”，设置“问题回复”字段包含变量“wthf”
+					- 排序字段选择“创建时间”
+					- 排序类型选择“降序”
+					- 显示条数设置“5”
+					- 模板选择“简单列表”
+ ![](https://qcloudimg.tencent-cloud.cn/raw/2b88266bc9ec9af60f9bd233a92574a7.png)    
 
-  - 数据筛选条件设置“是否公布”字段等于变量“sfhf”，设置“问题回复”字段包含变量“wthf”
-
-  - 排序字段选择“创建时间”
-
-  - 排序类型选择“降序”
-
-  - 显示条数设置“5”
-
-  - 模板选择“简单列表”
-
-![](https://qcloudimg.tencent-cloud.cn/raw/2b88266bc9ec9af60f9bd233a92574a7.png)
-
-普通容器:
-
-![](https://qcloudimg.tencent-cloud.cn/raw/8d232bbd6179d38c6fe99ef601d37249.png)
-
-图标
-
-- 增加变量“_id”
-
-- 图标添加页面跳转事件，跳转到“知识详情页”，参数为_id，绑定知识管理数据表的“数据标识”
-
+    - 普通容器：
+![](https://qcloudimg.tencent-cloud.cn/raw/8d232bbd6179d38c6fe99ef601d37249.png) 
+	  - 图标：
+			- 增加变量“\_id”
+			- 图标添加页面跳转事件，跳转到“知识详情页”，参数为_id，绑定知识管理数据表的“数据标识”
   ![](https://qcloudimg.tencent-cloud.cn/raw/91733868be79ba1cc6e834da72ce3a63.png)
 
   
 
 ### 知识详情页面
 
-1. 页面创建
-
-   创建自定义空白页面，页面命名“知识详情页”。
-
-2. 组件设置
-
-   增加“顶部导航”和“数据视图”组件。
-
+1. **页面创建**：创建自定义空白页面，页面命名“知识详情页”。
+2. **组件设置**：增加“顶部导航”和“数据视图”组件。
    ![](https://qcloudimg.tencent-cloud.cn/raw/814b55f152a136bdc0fdc74c91f361db.png)
-
-   顶部导航组件
-
-   基础属性
-
-   - “导航标题”设置“知识库详情”
-
+	- 顶部导航组件
+		- 基础属性设置：
+			- “导航标题”设置“知识库详情”
      ![](https://qcloudimg.tencent-cloud.cn/raw/e6b66e17bab5f238655f97f8d505a548.png)
-
      ![](https://qcloudimg.tencent-cloud.cn/raw/0b2025832d15ba97c2593cd1345ac60b.png)
-
-普通容器
-
-数据视图下会有三组组普通容器，每个普通容器都会有对应的文本、富文本、图片等。
-
+		- 普通容器
+			- 基础属性设置：数据视图下会有三组组普通容器，每个普通容器都会有对应的文本、富文本、图片等。
 ![](https://qcloudimg.tencent-cloud.cn/raw/66e490e8a141618a79b723f7d2185add.png)
 
 第一组普通容器显示知识标题
