--- a/product/移动与通信/版权音乐助手/常见问题/使用相关问题.md
+++ b/product/移动与通信/版权音乐助手/常见问题/使用相关问题.md
@@ -4,7 +4,7 @@
 
 [](id:q2)
 ### 曲库服务可以在哪些场景使用？
-线上 KTV 、秀场直播、语音电台、直播电商、社交游戏、内容创作、游戏配乐、视频编辑应用、创作工具等场景皆可使用正版曲库直通车服务，实现版权音乐的规范化使用，为您的业务增长保驾护航。
+线上 KTV 、秀场直播、语音电台、直播电商、社交游戏等场景皆可使用正版曲库直通车服务，实现版权音乐的规范化使用，为您的业务增长保驾护航。
 
 [](id:q3)
 ### 是否可以提供相关场景功能？
