--- a/product/计算与网络/无服务器云函数/操作指南/监控与告警管理/应用性能管理/应用性能观测.md
+++ b/product/计算与网络/无服务器云函数/操作指南/监控与告警管理/应用性能管理/应用性能观测.md
@@ -185,7 +185,7 @@ exports.main_handler = async (event, context) => {
 ::: Python
 >! 
 > 1. Jaeger 最新版 Python SDK 已经不支持 HTTP 协议上报，因此在 Python 运行环境下，推荐使用 Open Telemetry SDK。
-> 2. Open Telemetry SDK 仅支持 Python 3.7 及以上版本，SCF 基础镜像为 Python 3.6，本文提供基于镜像部署的自定义上报示例。
+> 2. Open Telemetry SDK 仅支持 Python 3.7 及以上版本，本文提供基于镜像部署的自定义上报示例。
 
 1. 请参考 [使用镜像部署函数](https://cloud.tencent.com/document/product/583/56052#.E5.89.8D.E6.8F.90.E6.9D.A1.E4.BB.B6) 完成前提条件准备。
 
