--- a/product/企业协同/腾讯会议/API 文档/REST APIs/企业会议管理/取消用户授权.md
+++ b/product/企业协同/腾讯会议/API 文档/REST APIs/企业会议管理/取消用户授权.md
@@ -1,5 +1,4 @@
-## 取消用户授权
-### 基本信息
+## 接口描述
 - **接口描述：**
  - 第三方应用可以调用该接口来取消用户的授权，仅支持授权用户所属企业开启“允许企业成员自主授权应用”‘。
  - 如果企业开启了“仅管理员可授权应用”，用户只能在 [腾讯会议授权页](https://meeting.tencent.com/marketplace/installed) 取消授权，无法在第三方平台取消。
@@ -9,11 +8,11 @@
 https://api.meeting.qq.com/v1/auth-users/cancel-auth
 ```
 
-### 输入参数
+## 输入参数
 该接口 Body 中无参数，使用请求头中的 openId 用户身份来取消授权。
 
-### 输出参数
-**输出示例**
+## 输出参数
+### 输出示例
 - 取消用户授权成功则返回空值。
 - 失败返回示例代码：
 ```plaintext
