更新了部分图文

--- a/product/计算与网络/事件总线/快速入门/快速投递自定义事件.md
+++ b/product/计算与网络/事件总线/快速入门/快速投递自定义事件.md
@@ -8,12 +8,13 @@
 1. 登录 [事件总线控制台](https://console.cloud.tencent.com/eb)，单击**新建事件集**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/371e14d81565b107964571c508dc21b9.png)
 2. 填写事件集名称与事件集描述： 
-![](https://qcloudimg.tencent-cloud.cn/raw/4edeb09674714bf29d5f76a1f5caa2c2.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/07498ed75cfd1d79dcb59dcf38e64b5d.png)
 3. 单击**确定**后完成创建。
+
 
 ### 2. 创建事件连接器
 1. 在事件集页点击自定义事件集名称，进入事件集详情页。
-![](https://qcloudimg.tencent-cloud.cn/raw/d0589e66250db1ac0821aa2aad22fa2c.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/34a171fb2e03a811502993aa9446f28c.png)
 2. 进入事件集详情页，单击事件连接器栏中的**添加**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/c8e7c89f53032ff726c8ded5bfcc16ef.png)
 3. 以 Ckafka 事件连接器为例，根据页面提示填写相关信息：
@@ -52,8 +53,8 @@
 2. 在“事件规则”顶部选框，选择之前创建的事件集，并单击**新建事件规则**：
 ![](https://qcloudimg.tencent-cloud.cn/raw/6f6ce683ceaeb7b23cbc89e7b9d57d14.png)
 3. 根据页面提示填写相关信息：
-![](https://qcloudimg.tencent-cloud.cn/raw/3b5cbda54adff5f74a0949577580ed78.png)
-该事件模式的含义是，接收所有来自 Ckafka 且在 target-topic 下的消息。事件模式的具体编写方法，请参见 [事件模式](https://cloud.tencent.com/document/product/1359/56084)。
+![](https://qcloudimg.tencent-cloud.cn/raw/0431a123f1bc14b4c1d650a9a3170f0f.png)
+该事件模式的含义是，接收所有来自 TDMQ 连接器的消息。事件模式的具体编写方法，请参见 [事件模式](https://cloud.tencent.com/document/product/1359/56084)。
 4. 单击**下一步**后配置事件目标，可选的事件目标包括 [SCF 云函数](https://cloud.tencent.com/document/product/1359/58791)、[日志服务 CLS](https://cloud.tencent.com/document/product/1359/62567)、[消息推送](https://cloud.tencent.com/document/product/1359/62568) 及 [Ckafka](https://cloud.tencent.com/document/product/1359/71424)。此处以云函数为例，事件内容将以参数的形式传递给云函数：
 ![](https://qcloudimg.tencent-cloud.cn/raw/d2b8e38c2467b23cfaae6dc37c1706c0.png)
 此处 test 函数的功能是打印接收到的事件，您可以根据实际业务场景编写您的函数。另外，您也可以通过平台提供的模板函数快速将事件投递到 Ckafka 或下游的 SaaS 服务。具体可参见 [SCF 目标投递](https://cloud.tencent.com/document/product/1359/58791)。
@@ -83,3 +84,13 @@ Received event: {
   "type": "connector:kafka"
 }
 ```
+
+
+### 5. 追踪历史投递事件
+事件总线为用户提供了事件追踪能力，开启「事件追踪」后，在事件集的「事件查询」页可以看到事件投递记录。
+
+![](https://qcloudimg.tencent-cloud.cn/raw/f6b371d16a547f9b3e365edfc87f6f19.png)
+
+事件追踪方式若选择「默认投递」，将仅能查询匹配成功但投递到下游失败的事件。若需查询全部事件，请在「事件集-事件追踪」中进行如下图配置：
+
+![](https://qcloudimg.tencent-cloud.cn/raw/33460bc5b9f379bf55966db82f090ff7.png)
