--- a/product/计算与网络/轻量应用服务器/操作指南/查看实例详情.md
+++ b/product/计算与网络/轻量应用服务器/操作指南/查看实例详情.md
@@ -45,6 +45,12 @@
 	<li>防火墙：您可以对实例的防火墙规则进行配置。</li>
 	<li>DDoS 防护：可前往腾讯云 DDoS 防护产品控制台进行查看和管理。</li>
 	</ul></td></tr>
+	<tr><td>安全信息</td>
+	<td>您可以查看实例绑定的 DDoS 防护信息，包括<ul  style="margin: 0;">
+	<li>防护类型：DDoS 的防护类型，您可以根据需要购买对应类型的 DDoS 防护。</li>
+	<li>防护规格：DDoS 的防护规格。</li>
+	<li>安全状态：实例 DDoS 的防护状态。</li>
+	</ul></td></tr>
 	<tr><td>镜像信息</td>
 	<td>您可以查看实例的镜像基本信息，包括：<ul  style="margin: 0;">
 	<li>镜像名称：展示镜像的名称。支持重置应用或制作自定义镜像。</li>
