--- a/product/视频服务/点播/最佳实践/直播录制/如何在直播过程中实现回看功能.md
+++ b/product/视频服务/点播/最佳实践/直播录制/如何在直播过程中实现回看功能.md
@@ -15,22 +15,22 @@
 
 ## 实践步骤
 ### 步骤1：开通云点播服务[](id:step1)
-1. 进入 [云点播控制台](https://console.cloud.tencent.com/vod/overview)，单击【立即开通】。
-2. 勾选开通服务协议，单击【确定】即可成功开通云点播服务，并访问云点播控制台。
+1. 进入 [云点播控制台](https://console.cloud.tencent.com/vod/overview)，单击**立即开通**。
+2. 勾选开通服务协议，单击**确定**即可成功开通云点播服务，并访问云点播控制台。
 
 
 ### 步骤2：添加时移播放域名[](id:step2)
 您需要添加用于时移播放的云点播域名，具体操作如下：
-1. 在[云点播控制台](https://console.cloud.tencent.com/vod/overview)，左侧导航栏里【分发播放管理】>【域名管理】。
+1. 在[云点播控制台](https://console.cloud.tencent.com/vod/overview)，左侧导航栏里**分发播放管理**>**域名管理**。
 ![](https://main.qcloudimg.com/raw/a945065b6369de2dbc3b6acdd54ee187.png)
-2. 单击【添加域名】并填写已备案的云点播域名，具体操作请参见 [分发播放设置](https://cloud.tencent.com/document/product/266/33371)。
+2. 单击**添加域名**并填写已备案的云点播域名，具体操作请参见 [分发播放设置](https://cloud.tencent.com/document/product/266/33371)。
 ![](https://main.qcloudimg.com/raw/8c889bf37db61b99e6558c79d76cf35a.png)
 3. 完成新增域名 CNAME 配置操作，具体请参见 CNAME 配置 [快速添加域名解析](https://cloud.tencent.com/document/product/302/3446)。
 
 ### 步骤3：关联录制模板[](id:step3)
-1. 进入 [云直播控制台](https://console.cloud.tencent.com/live/config/record)，单击【功能配置】>【[直播录制](https://console.cloud.tencent.com/live/config/record)】。
+1. 进入 [云直播控制台](https://console.cloud.tencent.com/live/config/record)，单击**功能配置**>**[直播录制](https://console.cloud.tencent.com/live/config/record)**。
 ![](https://main.qcloudimg.com/raw/86b879c221d7ab8cafae1ca479898d1a.png)
-2. 单击【创建录制模板】，具体操作请参见 [录制模板配置](https://cloud.tencent.com/document/product/267/20384)。
+2. 单击**创建录制模板**，具体操作请参见 [录制模板配置](https://cloud.tencent.com/document/product/267/20384)。
 ![](https://main.qcloudimg.com/raw/4da5fd6ac81582b8cc87e572b5e65602.png)
 >!
 >- 选择录制文件类型为 HLS 格式，开启 HLS 录制。
