--- a/product/视频服务/点播/最佳实践/直播录制/如何在直播过程中实现回看功能.md
+++ b/product/视频服务/点播/最佳实践/直播录制/如何在直播过程中实现回看功能.md
@@ -8,7 +8,7 @@
 - [注册](https://cloud.tencent.com/register?&s_url=https%3A%2F%2Fcloud.tencent.com%2F) 并 [登录](https://cloud.tencent.com/login?s_url=https%3A%2F%2Fcloud.tencent.com%2F) 腾讯云账号，并且完成账号实名认证。
 - 已开通腾讯云直播服务，并添加 [推流域名](https://cloud.tencent.com/document/product/267/20381)。
 
-## 注意事项：
+## 注意事项
 - 使用时移回看功能的前提是目标直播流开启了 [时移回看](#time) 功能。
 - 相对时移时长当前最小为90秒，即回看的内容相较直播内容有 90 秒以上的延迟。
 - 目前时移功能内测暂不单独计费，直播时移功能将于**2022年06月01日零时**起结束内测，正式开始收费，详情请参见 [公告](https://cloud.tencent.com/document/product/267/73074)。开启时移功能需要使用直播录制功能，会产生 [直播录制费用、点播存储费用和视频播放费用](https://cloud.tencent.com/document/product/266/2838)。
