--- a/product/计算与网络/事件总线/事件规则/管理事件规则.md
+++ b/product/计算与网络/事件总线/事件规则/管理事件规则.md
@@ -27,9 +27,10 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/4c3354fb3d52f34d2d229f4ea9d626f6.png)
 
 ### 删除事件规则
->! 前置条件：您已删除该规则下的所有事件目标。
+>! 在删除事件规则之前，您需要确认已删除该规则下的所有事件目标。
+>
 1. 登录 [事件规则控制台](https://console.cloud.tencent.com/eb/rule)。
 2. 在顶部菜单栏，选择地域与事件集。
-3. 在事件规则列表找到您需要删除的事件规则，在其右侧操作栏下单击**删除**。如下图所示:
+3. 在事件规则列表找到您需要删除的事件规则，在其右侧操作栏下单击**删除**。如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/9cd5e25a433334285150d8748351e43d.png)
 4. 在弹出的确认窗口中确认删除即可。
