--- a/product/视频服务/点播/最佳实践/如何接收事件通知.md
+++ b/product/视频服务/点播/最佳实践/如何接收事件通知.md
@@ -15,7 +15,7 @@ Demo 基于云函数（SCF） 搭建了一个 HTTP 服务，用于接收来自 V
 
 1. 在控制台上传一个视频到 VOD。
 2. VOD 后台发起 NewFileUpload 事件通知请求给 Demo。
-3. Demo 解析事件通知内容，调用 VOD 的 [ProcessMedia](https://cloud.tencent.com/document/product/266/33427) 接口对刚上传的视频发起转码，使用的转码模版为 [系统预置模版](https://cloud.tencent.com/document/product/266/33476#.E9.A2.84.E7.BD.AE.E8.BD.AC.E7.A0.81.E6.A8.A1.E6.9D.BF) 100010和100020。
+3. Demo 解析事件通知内容，调用 VOD 的 [ProcessMedia](https://cloud.tencent.com/document/product/266/33427) 接口对刚上传的视频发起转码，使用的转码模板为 [系统预置模板](https://cloud.tencent.com/document/product/266/33476#.E9.A2.84.E7.BD.AE.E8.BD.AC.E7.A0.81.E6.A8.A1.E6.9D.BF) 100010和100020。
 4. VOD 完成转码任务后，发起 ProcedureStateChanged 事件通知请求给 Demo。
 5. Demo 解析事件通知内容，将转码输出文件的 URL 打印到 SCF 日志中。
 
