--- a/product/计算与网络/事件总线/产品简介/限制说明.md
+++ b/product/计算与网络/事件总线/产品简介/限制说明.md
@@ -46,10 +46,12 @@
 </tbody></table>
 
 
+<dx-alert infotype="notice" title="">
+- 事件总线 EventBridge 平台目前支持万级的并发，对于并发需求较高的场景，例如电商促销、医疗生物数据并行处理等均可有效支持。如有更高需求可以通过 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 申请提升配额。
+- 相关个数限制可以通过分地域部署、分事件集部署等方式完成，如业务需要更多限制开放，可以通过 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 申请提升配额。
+</dx-alert>
 
->! 
->- 事件总线 EventBridge 平台目前支持万级的并发，对于并发需求较高的场景，例如电商促销、医疗生物数据并行处理等均可有效支持。如有更高需求可以通过 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 申请提升配额。
->- 相关个数限制可以通过分地域部署、分事件集部署等方式完成，如业务需要更多限制开放，可以通过 [在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 申请提升配额。
+
 
 
 ### 规则限制
