--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/App SDK 接入/接入人脸核身/验证结果/查询核身结果.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/App SDK 接入/接入人脸核身/验证结果/查询核身结果.md
@@ -28,7 +28,8 @@
 
 ## 人脸核身结果查询接口(升级)
 ### 请求
-- **请求 URL：**`https://miniprogram-kyc.tencentcloudapi.com/api/v2/base/queryfacerecord`
+- **请求 URL：**`https://miniprogram-kyc.tencentcloudapi.com/api/v2/base/queryfacerecord?orderNo=xxx`
+>! 为方便查询耗时，该请求url后面请拼接 orderNo 订单号参数。
 - **请求方法：**POST
 - **请求参数：**
 <table>
