--- a/product/存储与CDN/对象存储 4.0/购买指南/计费方式/资源包（预付费）/资源包退费.md
+++ b/product/存储与CDN/对象存储 4.0/购买指南/计费方式/资源包（预付费）/资源包退费.md
@@ -14,9 +14,10 @@
 >- 如需退还参与活动购买的资源包，且退款规则与活动规则有冲突，则以活动规则为准。
 >- 如出现疑似异常或恶意退费，腾讯云有权拒绝您的退费申请。
 
+
 ### 退费金额计算方法
 
-退款金额 = 支付金额 -（已使用时长/总时长）\* 订单原价 \* 适用折扣
+退款金额 = 支付金额 -（已使用时长/总时长）× 订单原价 × 适用折扣
 
 >?
 > - 已使用时长指订单从购买到退款之间的时长。已使用时长不足1天，按1天计算。
@@ -28,43 +29,45 @@
 
 假设您在 COS 资源包购买页购买了一个规格为“中国大陆通用、50GB、6个月有效时长”的标准存储容量包，无可用代金券，现金支付金额24.07元。购买当天，资源未使用，并且满足自助退费条件，您进行了自助退费，则按照退费计算方法分析如下：
 
-- 订单原价为 50GB \* 6个月 \* 0.118元/GB/月 = 35.4元。
+- 订单原价为 50GB × 6个月 × 0.118元/GB/月 = 35.4元。
 - 已使用时长不足1天，按1天计算。
 
-则退款金额 = 24.07 -（1/180）\* 35.4 = 23.87元。
+则退款金额 = 24.07 -（1/180）× 35.4 = 23.87元。
 
 
-## 如何自助退费？
+## 自助退费操作步骤
 
 - 对于新购资源包
 在符合自助退费条件的情况下，可在 **COS 控制台 > 资源包管理**中退费，操作指引请参见 [对新购资源包进行退费](#new)。
 - 对于续费资源包
 在符合自助退费条件的情况下，可在**费用中心 > 续费管理**中退费，操作指引请参见 [对已续费的资源包进行退费](#renewal)。
 
-<span id="new"></span>
 
-### 对新购资源包进行退费
+
+### 对新购资源包进行退费[](id:new)
 
 
 1. 登录 [对象存储控制台](https://console.cloud.tencent.com/cos5)。
-2. 在左侧菜单栏中，单击**资源包管理**，进入资源包管理**自购资源包**页面。
+2. 单击左侧菜单栏中的**资源包管理**，进入资源包管理**自购资源包**页面。
 3. 找到您想要退费的资源包，单击资源包右侧的**退费**。
 >!用量统计数据非实时数据（有24小时延迟），如果您当天购买资源包，需要在次日才能看到当天的用量。
+>
 4. 在退款信息页面，请仔细核对退款信息（包括资源包信息、退款形式、退款金额等）。
 5. 确认信息无误后，单击**确认退款**提交申请。
  - 提交自助退款申请后，系统将经过3 - 5分钟完成退款并销毁云资源。
  - 您可在 [订单管理](https://console.cloud.tencent.com/expense/deal) 查看退款订单。当订单状态更新为“已退款”后，可在费用中心页面查看款项。
 
 
-<span id="renewal"></span>
 
-### 对已续费的资源包进行退费
+
+### 对已续费的资源包进行退费[](id:renewal)
 
 1. 登录 [腾讯云控制台](https://console.cloud.tencent.com)。
-2. 在控制台页面的右上方单击**费用 > 费用中心 > 续费管理**，在产品类别中选择“对象存储”，选择购买日期，在类型中选择“续费”进行筛选。
-![](https://qcloudimg.tencent-cloud.cn/raw/0ef34cc9abae72fad93a9d7c1c19b063.png)
+2. 在控制台页面的右上方单击**费用 > 费用中心 > 订单管理**，在产品类别中选择“COS 对象存储”，选择购买日期，在类型中选择“续费”进行筛选。如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/b755709f2a266d89eec0007d4d9cfec6.png)
 3. 找到您想要退费的资源包，单击资源包右侧的**退费**。
 >!用量统计数据非实时数据（有24小时延迟），如果您当天购买资源包，需要在次日才能看到当天的用量。
+>
 4. 在退款信息页面，请仔细核对退款信息（包括资源包信息、退款形式、退款金额等）。
 5. 确认信息无误后，单击**确认退款**提交申请。
  - 提交自助退款申请后，系统将经过3 - 5分钟完成退款并销毁云资源。
