--- a/product/视频服务/实时音视频/高级功能/音视频内容安全审核/接入流程.md
+++ b/product/视频服务/实时音视频/高级功能/音视频内容安全审核/接入流程.md
@@ -8,7 +8,9 @@
 ```
 trtc://trtc.tencentcloudapi.com/moderation?sdk_app_id=xxxx&room_id=xxxx&user_id=xxxx&user_sig=xxxx
 ```
->! URL 中的每个参数值在拼装前需要先 escape 一下，防止有特殊字符无法解析，特别是 user_sig。
+>! 
+>- URL 中的每个参数值在拼装前需要先 escape 一下，防止有特殊字符无法解析，特别是 user_sig。
+>- 本文档涉及的 TRTC 相关参数：sdk_app_id、user_id、user_sig、room_id，分别对应您接入 TRTC SDK 中 SdkAppId、UserId、UserSig、RoomId。
 <table>
 <thead><tr><th>参数名称</th><th>必选</th><th>描述</th></tr></thead>
 <tbody><tr>
