--- a/product/存储与CDN/安全加速/购买指南/计费变更公告.md
+++ b/product/存储与CDN/安全加速/购买指南/计费变更公告.md
@@ -10,7 +10,8 @@
 ### 升级过程
 
 1. 如您在原套餐到期前，想要升级为新版计费套餐，可 [联系我们](https://console.cloud.tencent.com/workorder/category) 进行套餐升级。
-2. 我们会保证将您的安全防护配置平滑迁移至新版计费套餐。
+2. 升级服务需要由用户主动发起，期间我们会保证将您的安全防护配置平滑迁移至新版计费套餐。
+3. 没有提出升级申请的用户，服务到期后需要重新选购新套餐，否则将会中断服务。
 
 ### 升级后说明
 
