--- a/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
+++ b/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
@@ -52,7 +52,7 @@ SCDN 安全加速套餐计费采用预付费包年包月模式，套餐按月购
 <table style="width:640px;">
     <caption></caption>
     <tr>
-        <th style ="width:270px;height:45px;position:relative;text-align:left;padding:5px 7px;font-weight:700;" valign="top" ><div style="position:absolute;width:1px;height:267px;top:0;left:0;background-color: #d9d9d9;display:block;transform:rotate(-78.8deg);transform-origin:top;valign=top;"></div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;套餐名称<br>计费项名称</th>
+        <th style ="width:270px;height:45px;position:relative;text-align:left;padding:5px 7px;font-weight:700;" valign="top" ><div style="position:absolute;width:1px;height:267px;top:0;left:0;background-color: #d9d9d9;display:block;transform:rotate(-78.8deg);transform-origin:top;valign=top;"></div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;套餐名称<br>计费项目及配额</th>
         <th style="width:80px;padding:0;text-align:center;font-weight:700;">入门版</th>
         <th style="width:75px;padding:0;text-align:center;font-weight:700;">定制版1</th>
         <th style="width:75px;padding:0;text-align:center;font-weight:700;">定制版2</th>
