--- a/product/安全服务/安全营销运营平台/快速入门.md
+++ b/product/安全服务/安全营销运营平台/快速入门.md
@@ -4,7 +4,15 @@
 ### 步骤2：线上购买
 进入 [安全营销云平台产品购买页](https://buy.cloud.tencent.com/smop)，根据需求选择相应套餐和时长，单击**立即支付**，支付成功后，即可购买完成。
 ### 步骤3：使用服务
-用户进入 [安全营销运营平台控制台](https://console.cloud.tencent.com/smop)，选择需要的模块功能（例如 [产品装修](https://console.cloud.tencent.com/smop/mall/mall_front_page)、[采购资源](https://console.cloud.tencent.com/smop/purchase/stockMall) 或 [创建活动](https://console.cloud.tencent.com/smop/mall/act_create_index) 等），根据控制台提示进行相关功能模块的配置，即可生成对应的用户运营页面。
+- [企业中心]()：可快速了解企业的账号信息、如何添加产品、所用版本信息等。
+- [资源库存]()：您可查看到企业的商品情况，可在资源中心采购商品，或者在企业总库存上添加所需要的商品。商品添加好后进行库存分配方可进行上线。
+- [产品管理]()：分为产品装修、商品管理、积分任务、活动管理，可根据需求对企业产品进行创建积分任务、活动创建，还可以对积分商城进行装修、设置商品上下架等。
+- [用户管理]()：查看用户详细的积分信息。
+- [电商商城]()：可提前预览电商商城，查看订单情况和售后情况。
+- [数据统计]()：有详细的数据看板。
+
+
 ### 步骤4：正式运营
 将生成的用户运营页面，投放至您的产品内，包括但不限于 H5、微信公众号等产品场景，用户即可访问相应的运营页面，累积积分。
+
 
