--- a/product/互联网中间件/TDMQ RabbitMQ 版/01 产品简介/05 使用限制.md
+++ b/product/互联网中间件/TDMQ RabbitMQ 版/01 产品简介/05 使用限制.md
@@ -17,7 +17,7 @@ width: 50%;
 ### Vhost
 | 限制类型 |  限制说明 | 
 | --------------------------- | ---------- |
-| Vhost 名称长度              | 3 - 64字符   |
+| Vhost 名称长度              | 1 - 64字符   |
 | 单 Vhost TPS 上限           | 8000       |
 | 单 Vhost 客户端链接数量上限 | 8000       |
 | 单集群内 Vhost 数量上限      | 10         |
@@ -26,7 +26,7 @@ width: 50%;
 ### Exchange
 | 限制类型 |  限制说明 | 
 | --------------------------- | ---------- |
-| Exchange 名称长度           | 3 - 64字符   |
+| Exchange 名称长度           | 1 - 64字符   |
 | 单集群内 Exchange 数量上限   | 1000       |
 
 
@@ -35,7 +35,7 @@ width: 50%;
 | 限制类型 |  限制说明 | 
 | --------------------------- | ---------- |
 | 单集群内 Queue 数量上限      | 1000       |
-| Queue 名称长度              | 3 - 64字符   |
+| Queue 名称长度              | 1 - 64字符   |
 
 
 ### 消息
@@ -51,4 +51,9 @@ width: 50%;
 | 限制类型 |  限制说明 | 
 | --------------------------- | ---------- |
 | 单 Connection 的 Channel 数量 |  1000 |
+
+### 公网带宽
+| 限制类型 |  限制说明 | 
+| --------------------------- | ---------- |
+| 单个账号公网带宽 |  5Mbps |
 
