--- a/product/移动与通信/应用服务平台/动态与公告/公告/云开发升级新计费套餐.md
+++ b/product/移动与通信/应用服务平台/动态与公告/公告/云开发升级新计费套餐.md
@@ -34,7 +34,7 @@
 </tr>
 </tbody></table>
 
-更多信息请查看 [计费说明]( https://cloud.tencent.com/document/product/876/73182)。
+以上价格均为单月价格，一次性购买多月将享受折扣。更多信息请查看 [计费说明]( https://cloud.tencent.com/document/product/876/73182)。
 
 在正式进行计费方式切换之日起，对现有用户均提供一个月的操作缓冲期，用户可选择合适的套餐进行切换；对现有免费配额的环境将提供一张代金券。
 
