--- a/product/移动与通信/即时通信/产品动态.md
+++ b/product/移动与通信/即时通信/产品动态.md
@@ -3,6 +3,21 @@
 <tr><th width="20%">动态名称</th>  <th width="44%">动态描述</th><th width="15%">发布时间</th><th width="21%">相关文档</th>
 </tr> 
 <tr>
+    <td> SDK 2.19.0 版本发布（小程序和 Web 端）</td>
+    <td><ul style="margin:0">
+<li>支持 <a href="https://cloud.tencent.com/document/product/269/1502#.E7.BE.A4.E7.BB.84.E7.B1.BB.E5.9E.8B.E4.BB.8B.E7.BB.8D">社群（Community）</a>下创建话题（Topic），支持互动性更强的场景。</li>
+<li><a href="https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#getGroupListWithTopic">getGroupListWithTopic</a> 获取支持话题的社群列表。</li>
+<li><a href="https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#createGroupTopic">createGroupTopic</a> 创建话题。</li>
+<li><a href="https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#deleteGroupTopic">deleteGroupTopic</a> 删除话题。</li>
+<li><a href="https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#setGroupTopicProfile">setGroupTopicProfile</a> 设置话题资料。</li>
+<li><a href="https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#getGroupTopicList">getGroupTopicList</a> 获取话题列表。</li>
+<li><a href="https://web.sdk.qcloud.com/im/doc/zh-cn/GroupTopic.html">GroupTopic</a> 社群话题对象，用于描述话题具有的属性，如名称、公告、简介、未读数等信息。</li>
+<li> 更多更新内容请参考 <a href="https://cloud.tencent.com/document/product/269/38492">更新日志</a></li>
+    </ul></td>
+    <td> 2022-04-29 </td>
+    <td> <a href="https://cloud.tencent.com/document/product/269/36887#web">Web SDK下载</a></td>
+</tr>
+<tr>
     <td> SDK 2.18.2 版本发布（小程序和 Web 端）</td>
     <td><ul style="margin:0">
 <li>优化直播群使用体验</li><li>修复部分场景下统计不准确的问题</li><li>修复调用接口 <a href="https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#getGroupMessageReadMemberList">getGroupMessageReadMemberList</a> 返回结果不准确的问题<li> 更多更新内容请参考 <a href="https://cloud.tencent.com/document/product/269/38492">更新日志</a></li>
@@ -10,7 +25,6 @@
     <td> 2022-04-22 </td>
     <td> <a href="https://cloud.tencent.com/document/product/269/36887#web">Web SDK下载</a></td>
 </tr>
-
 <td>Flutter SDK 3.9.3</td>
 <td><ul style="margin:0">
   <li>修复群禁言群 tips boolValue 丢失问题
