--- a/product/存储与CDN/安全加速/购买指南/计费变更公告.md
+++ b/product/存储与CDN/安全加速/购买指南/计费变更公告.md
@@ -1,17 +1,14 @@
-感谢您关注腾讯云安全加速 SCDN 服务。腾讯云 SCDN 产品现已上线 [全新计费套餐](https://cloud.tencent.com/document/product/1226/73049)，您可根据业务实际需求，前往 [SCDN 购买页面](https://buy.cloud.tencent.com/scdn) 选购入门版、定制版、增强版任一套餐。对于使用旧版计费套餐的用户，我们支持计费套餐平滑升级。
+感谢您关注腾讯云安全加速 SCDN 服务。腾讯云 SCDN 产品现已上线 [全新计费套餐](https://cloud.tencent.com/document/product/1226/73049)，您可根据业务实际需求，前往 [SCDN 购买页面](https://buy.cloud.tencent.com/scdn) 选购入门版、定制版、增强版任一套餐。**对于使用旧版计费套餐的用户，我们支持计费套餐平滑升级，**相关说明如下：
 
-## 升级说明
+### 升级前说明
 
-### 升级前
+1. 旧版套餐**自动续费入口已关闭**，您可以前往 [控制台-服务概览页](https://console.cloud.tencent.com/cdn) 查看 SCDN 套餐到期时间。
+2. 您的旧版套餐在原套餐**到期前**，套餐权益将不变，可正常使用 SCDN 安全防护；**到期后**，为避免您的安全防护服务中断，请您及时前往 SCDN 购买页面选购新版计费套餐。
 
-1. 旧版套餐自动续费入口已关闭，您可以前往 [控制台-服务概览页](https://console.cloud.tencent.com/cdn) 查看 SCDN 套餐到期时间。
-2. 您的旧版套餐在原套餐到期前，套餐权益将不变，可正常使用 SCDN 安全防护。
-
-### 升级过程
+### 升级过程说明
 
 1. 如您在原套餐到期前，想要升级为新版计费套餐，可 [联系我们](https://console.cloud.tencent.com/workorder/category) 进行套餐升级。
-2. 升级服务需要由用户主动发起，期间我们会保证将您的安全防护配置平滑迁移至新版计费套餐。
-3. 没有提出升级申请的用户，服务到期后需要重新选购新套餐，否则将会中断服务。
+2. 套餐平滑升级服务需要由您主动发起，期间我们会保证将您的安全防护配置平滑迁移至新版计费套餐。
 
 ### 升级后说明
 
