--- a/product/存储与CDN/安全加速/购买指南/套餐到期与续费说明.md
+++ b/product/存储与CDN/安全加速/购买指南/套餐到期与续费说明.md
@@ -16,10 +16,10 @@
 
 例如：您在2022-04-08 16:24:06 购买 SCDN 入门版套（1个月有效期），续费一个月，套餐新的到期时间为：2022-05-08 16:24:06 。
 
->? 如您需要开启/关闭套餐的自动续费，可前往 [费用中心 - 续费管理](https://console.cloud.tencent.com/account/renewal)。
+> ? 如您需要开启/关闭套餐的自动续费，可前往 [费用中心 - 续费管理](https://console.cloud.tencent.com/account/renewal)。
 
 ## 到期提醒与续费须知
 
 1. 套餐到期前7天，我们将在**服务概览**页安全加速 SCDN 套餐**防护状态**中提示您，套餐临近到期请及时续费。
-2. 套餐到期后1 - 7天，已过期套餐配置仍被保留。若您及时续费，可激活原有配置，继续为您的业务进行安全防护。
+2. 套餐到期后1 - 7天，已过期套餐配置仍被保留，但会停止安全防护。若您及时续费，可激活原有配置，继续为您的业务进行安全防护。
 3. 套餐到期后第8天，已过期套餐配置将被清理。若您需要开启安全加速 SCDN 服务，请重新购买套餐。
