--- a/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
+++ b/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
@@ -70,7 +70,7 @@ SCDN 安全加速套餐计费采用预付费包年包月模式，套餐按月购
 </tr>
 <tr>
 <td align="left">DDoS/CC 增强流量清洗<br>（DDoS 1Tbps + CC 100W QPS + 10TB 安全防护流量）</td>
-<td align="left">-</td>
+<td align="left">可升配<br>付费开通</td>
 <td align="left">✓</td>
 <td>✓</td>
 <td>✓</td>
@@ -78,17 +78,17 @@ SCDN 安全加速套餐计费采用预付费包年包月模式，套餐按月购
 </tr>
 <tr>
 <td align="left">Web 攻击防护（QPS）<br>（开通即享有1000万次 Web 防护量）</td>
-<td align="left">不支持<br>开通</td>
-<td align="left">支持<br>开通</td>
+<td align="left">-</td>
+<td align="left">可升配<br>付费开通</td>
 <td>✓</td>
-<td>支持<br>开通</td>
+<td>可升配<br>付费开通</td>
 <td>✓</td>
 </tr>
 <tr>
 <td align="left">BOT 攻击防护（QPS）<br>（开通即享有1000万次 BOT 防护量）</td>
-<td align="left">不支持<br>开通</td>
-<td align="left">支持<br>开通</td>
-<td>支持<br>开通</td>
+<td align="left">-</td>
+<td align="left">可升配<br>付费开通</td>
+<td>可升配<br>付费开通</td>
 <td>✓</td>
 <td>✓</td>
 </tr>
@@ -109,11 +109,9 @@ SCDN 安全加速套餐计费采用预付费包年包月模式，套餐按月购
 <td>16,600</td>
 </tr>
 <tr>
-<td colspan="6"> 注：<strong>✓</strong>（套餐内包含的功能）、<strong>-</strong> (套餐内不包含的功能)、<br><strong>不支持开通</strong>（无法通过套餐升配付费开通)、<strong>支持开通</strong> (可通过套餐升配付费开通)</td>
+<td colspan="6"> 注：<strong>✓</strong>（套餐内包含的功能）、<strong>-</strong> (套餐内不包含的功能)</td>
 </tr>
 </tbody></table>
-
-
 
 <blockquote class="d-mod-explain">
               <div class="d-mod-title d-explain-title">
@@ -149,6 +147,7 @@ SCDN 安全加速套餐计费采用预付费包年包月模式，套餐按月购
 （3）BOT防护请求数 = （30 - 8）/30 \* 1000 = 733.33 万次 。
 
 > ?用量统计最小单位：
+>
 > - 安全防护流量 - Byte（计费单位 GB，1GB = 10^9 Byte）；Web 防护请求数/BOT 防护请求数 - 次（计费单位 万次）。
 > - 以上举例为方便描述规则，统一以GB、万次请求（小数点后两位）取整。
 
