--- a/product/互联网中间件/腾讯云微服务引擎/最佳实践/Kong 最佳实践/添加限流插件.md
+++ b/product/互联网中间件/腾讯云微服务引擎/最佳实践/Kong 最佳实践/添加限流插件.md
@@ -17,7 +17,7 @@
 ### 场景一：针对特定 API 请求路径进行全局限流，每秒1000次。
 
 <dx-alert infotype="notice" title="">
-由于 Kong 的实体上同种插件只允许绑定一个，所以如果需要对不同路径的API进行限流，建议配置配置多个 Route 来应对，并针对不同的 Route 分别绑定插件。
+由于 Kong 的实体上同种插件只允许绑定一个，所以如果需要对不同路径的API进行限流，建议配置多个 Route 来应对，并针对不同的 Route 分别绑定插件。
 </dx-alert>
 
 
