--- a/product/互联网中间件/腾讯云微服务引擎/最佳实践/Kong 最佳实践/添加缓存插件.md
+++ b/product/互联网中间件/腾讯云微服务引擎/最佳实践/Kong 最佳实践/添加缓存插件.md
@@ -69,7 +69,7 @@ Via: kong/2.4.1
 
 ### 场景二：通过 Admin API 查看指定缓存
 
-1. 通过 Proxy 代理方式开放 Kong Admin API（强烈建议开启认证）。
+1. 通过 Proxy 代理方式开放 [admin api](https://cloud.tencent.com/document/product/1364/73237)（建议开启安全认证）。
 2. 调用 Proxy Cache API `GET /proxy-cache/:cache_key` 查询特定 Cache Key 的缓存内容。
   - Cache Key 从 API 请求的响应头 `X-Cache-Key` 获取
   - 当 Cache 不存在时，返回 `404`
@@ -102,7 +102,7 @@ Via: kong/2.4.1
 
 ### 场景三：通过 Admin API  删除指定缓存
 
-1. 通过 Proxy 代理方式开放 Kong Admin API（强烈建议开启认证）。
+1. 通过 Proxy 代理方式开放 [admin api](https://cloud.tencent.com/document/product/1364/73237)（建议开启安全认证）。
 2. 调用 Proxy Cache API `DELETE /proxy-cache/:cache_key` 删除特定 Cache Key 的缓存内容
   - 当缓存存在时，删除成功，返回 `204`
   - 当缓存不存在时，删除失败，返回 `404`
