--- a/product/监控与管理/前端性能监控/产品动态.md
+++ b/product/监控与管理/前端性能监控/产品动态.md
@@ -16,6 +16,12 @@
  <td>2021-3-25</td> 
 <td><a href="https://console.cloud.tencent.com/rum/web/performance?PID=120000">体验 Demo</a></td>
 </tr>
+ <tr>
+<td>新增应用停止上报和恢复上报功能</td>
+<td >应用配置页面新增停止上报和恢复上报功能，方便用户对单个应用进行管理，降低不必要的上报成本。</td>
+ <td>2022-3-20</td> 
+<td><a href="https://cloud.tencent.com/document/product/1464/58146">应用设置</a></td>
+</tr>
 </tbody></table>
 
 
