--- a/product/视频服务/美视优享/购买指导/价格总览.md
+++ b/product/视频服务/美视优享/购买指导/价格总览.md
@@ -171,14 +171,14 @@
 <td>&#10003;</td>
 </tr>
 <tr>
-<td><b>贴纸</b><br>（赠送 10 款可选 2D 通用贴纸）</td>
+<td><b>贴纸</b><br>（赠送 10 款指定 2D 通用贴纸）</td>
 <td>&#10003;</td>
 <td>&#10003;</td>
 <td>&#10003;</td>
 <td>&#10003;</td>
 </tr>
 <tr>
-<td><b>高级贴纸</b><br>（赠送 3 款可选 3D 通用贴纸）</td>
+<td><b>高级贴纸</b><br>（赠送 3 款指定 3D 通用贴纸）</td>
 <td>&#10003;</td>
 <td>&#10003;</td>
 <td>&#10003;</td>
