--- a/product/移动与通信/即时通信/产品动态.md
+++ b/product/移动与通信/即时通信/产品动态.md
@@ -3,6 +3,19 @@
 <tr><th width="20%">动态名称</th>  <th width="44%">动态描述</th><th width="15%">发布时间</th><th width="21%">相关文档</th>
 </tr> 
 <tr>
+    <td> SDK 6.2.2363 增强版本发布</td>
+    <td><ul style="margin:0">
+	<li> 新增社群话题功能</li>
+	<li> 新增消息编辑接口</li>
+	<li> 支持 C2C 消息已读回执</li>
+	<li> 优化国际站的联网质量</li> 
+	<li> 修复消息已读后，卸载重装再拉取该消息，已读状态为未读的问题</li>
+	<li> 更多更新内容请参考 <a href="https://cloud.tencent.com/document/product/269/1606">更新日志</a></li>
+    </ul></td>
+    <td> 2022-04-29 </td>
+    <td> <a href="https://cloud.tencent.com/document/product/269/36887">终端 SDK 下载</a></td>
+</tr>
+<tr>
     <td> SDK 2.18.2 版本发布（小程序和 Web 端）</td>
     <td><ul style="margin:0">
 <li>优化直播群使用体验</li><li>修复部分场景下统计不准确的问题</li><li>修复调用接口 <a href="https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#getGroupMessageReadMemberList">getGroupMessageReadMemberList</a> 返回结果不准确的问题<li> 更多更新内容请参考 <a href="https://cloud.tencent.com/document/product/269/38492">更新日志</a></li>
