--- a/product/视频服务/实时音视频/高级功能/音视频内容安全审核/接入指引.md
+++ b/product/视频服务/实时音视频/高级功能/音视频内容安全审核/接入指引.md
@@ -5,7 +5,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/162b58fde216f36544b3931ea9d62b4b.png)
 
 ## 开通服务
-1. 进入 [腾讯云 TRTC 控制台](https://console.cloud.tencent.com/trtc)，开通 TRTC 服务。TRTC 会分配 SDKAppID，在创建内容审核时需要用到。（已经成功接入 TRTC 可以忽略该步骤）。
+1. 进入 [腾讯云 TRTC 控制台](https://console.cloud.tencent.com/trtc)，开通 TRTC 服务。TRTC 会分配 sdk_app_id，在创建内容审核时需要用到。（已经成功接入 TRTC 可以忽略该步骤）。
 2. 进入 [内容安全控制台](https://console.cloud.tencent.com/cms/livevideo/overview)，选择要使用的产品。选择直播音频或者直播视频时：
      - 如果是实时语音聊天应用，则选择直播音频内容安全 [ams]。
      - 如果是实时视频通话或者单人/多人互动直播，则选择直播视频内容安全 [vm]。
