--- a/product/视频服务/游戏多媒体引擎/购买指南/语音消息及转文本计费模式(旧).md
+++ b/product/视频服务/游戏多媒体引擎/购买指南/语音消息及转文本计费模式(旧).md
@@ -1,4 +1,4 @@
-此文档为旧版本计费模式，新版计费模式请查阅 [日结后付费模式文档](https://cloud.tencent.com/document/product/607/17808)。
+>!此文档为旧版本计费模式，新版计费模式请查阅 [日结后付费模式文档](https://cloud.tencent.com/document/product/607/17808)。
 
 
 
