--- a/product/管理与支持/计费相关(new)/购买流程/充值/对公汇款/对公汇款（旧版）.md
+++ b/product/管理与支持/计费相关(new)/购买流程/充值/对公汇款/对公汇款（旧版）.md
@@ -46,4 +46,4 @@
 
 ## 常见问题
 
-如有疑问，请参考 [充值常见问题](https://cloud.tencent.com/document/product/555/7444)。
+如有疑问，请参考 [旧版对公汇款相关](https://cloud.tencent.com/document/product/555/73176)。
