--- a/product/管理与支持/计费相关(new)/购买流程/充值/对公汇款/对公外汇.md
+++ b/product/管理与支持/计费相关(new)/购买流程/充值/对公汇款/对公外汇.md
@@ -59,4 +59,4 @@ Swift code：CMBCCNBS
 
 ## 常见问题
 
-如有疑问，请参考 [对公汇款常见问题](https://cloud.tencent.com/document/product/555/7444#.E5.AF.B9.E5.85.AC.E6.B1.87.E6.AC.BE.E5.B8.B8.E8.A7.81.E9.97.AE.E9.A2.98)。
+如有疑问，请参考 [对公汇款充值相关](https://cloud.tencent.com/document/product/555/73174)。
