--- a/product/管理与支持/实验室相关/培训认证/职业认证/在线认证相关问题/在线认证相关问题.md
+++ b/product/管理与支持/实验室相关/培训认证/职业认证/在线认证相关问题/在线认证相关问题.md
@@ -67,7 +67,7 @@
 
 确认交卷后，页面提示“考试结束”即表示交卷成功。
 
-### 为什么考试结束后认证个人中心仍显示”待参加考试“？
+### 为什么考试结束后认证个人中心仍显示“待参加考试”？
 
 成绩数据定期同步，请在收到考试结果通知后，根据通知指引进行查询；考试结果通知在考后7个工作日内发放。
 
