--- a/product/存储与CDN/对象存储 4.0/购买指南/计费方式/资源包（预付费）/资源包退费.md
+++ b/product/存储与CDN/对象存储 4.0/购买指南/计费方式/资源包（预付费）/资源包退费.md
@@ -63,9 +63,9 @@
 ### 对已续费的资源包进行退费[](id:renewal)
 
 1. 登录 [腾讯云控制台](https://console.cloud.tencent.com)。
-2. 在控制台页面的右上方单击**费用 > 费用中心 > 订单管理**，在产品类别中选择“COS 对象存储”，选择购买日期，在类型中选择“续费”进行筛选。如下图所示：
-![](https://qcloudimg.tencent-cloud.cn/raw/b755709f2a266d89eec0007d4d9cfec6.png)
-3. 找到您想要退费的资源包，单击资源包右侧的**退费**。
+2. 在控制台页面的右上方单击**费用 > 费用中心 > 续费管理**，在**手动续费项**中找到想要退费的已续费资源包，选择资源包右侧的**更多 > 退订续费**。如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/16060cec9f84b2c669e27d41bad658ed.png)
+3. 找到您想要退费的资源包，单击资源包右侧的**更多 > 退订续费**。
 >!用量统计数据非实时数据（有24小时延迟），如果您当天购买资源包，需要在次日才能看到当天的用量。
 >
 4. 在退款信息页面，请仔细核对退款信息（包括资源包信息、退款形式、退款金额等）。
